--- Auto-Git Commit ---

--- a/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/10. 处理器的IPI机制.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/10. 处理器的IPI机制.md
@@ -3,8 +3,8 @@
 
 <!-- code_chunk_output -->
 
-- [IPI消息对象](#ipi消息对象)
-  - [使用No shorthand目标类型](#使用no-shorthand目标类型)
+- [IPI消息目标地址](#ipi消息目标地址)
+  - [No shorthand下的目标地址](#no-shorthand下的目标地址)
 - [使用physical目标模式](#使用physical目标模式)
   - [2.1 广播IPI消息](#21-广播ipi消息)
   - [2.2 使用其他交付模式](#22-使用其他交付模式)
@@ -34,19 +34,20 @@ mov DWORD [APIC_BASE + ICR0]，000C4620H   ； 写ICR低32位
 
 值得注意的是，当需要写完整的**64位ICR命令字**时，应**先写高32位字**，再写低32位字。
 
-# IPI消息对象
+# IPI消息目标地址
 
 **ICR**的**destination shorthand域**设置了总的**目标类型**，**只有No Shorthand目标类型**才需要**提供具体的IPI消息发送对象**。
 
-在Self、All including self，以及All excluding self目标类型中使用固定的目标对象。
+## 
+在Self、All including self，以及All excluding self**目标类型**中使用**固定的目标对象**。
 
-## 使用No shorthand目标类型
+## No shorthand下的目标地址
 
 在No Shorthand目标类型里，最终的IPI消息目标依赖于下面几个设置。
 
-① Destination mode（目标模式）：选择**physical还是logical模式**, 提供**查找目标processor的方式**。
+① **Destination mode**（目标模式）：选择**physical还是logical模式**, 提供**查找目标processor的方式**。
 
-② Destination field（目标域）：这个值对于physical还是logical模式有不同的解释, **提供目标processor地址**。
+② **Destination field**（目标域）：这个值对于physical还是logical模式有不同的解释, **提供目标processor地址**。
 
 # 使用physical目标模式
 
