--- a/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/7. ICR寄存器-IPI.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/7. ICR寄存器-IPI.md
@@ -28,7 +28,7 @@
 
 这个域设置发送IPI消息的**目标类型**。
 
-① 00（No Shorthand）：这个模式**用户可以提供发送的指定目标**。
+① 00（No Shorthand）：这个模式用户可以**自定义**提供发送的**指定目标**。
 
 ② 01（Self）：logical processor给**自己发送IPI命令**。
 
