--- Auto-Git Commit ---

--- a/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/10. 处理器的IPI机制.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/10. 处理器的IPI机制.md
@@ -4,11 +4,14 @@
 <!-- code_chunk_output -->
 
 - [IPI消息目标地址](#ipi消息目标地址)
+  - [固定目标地址](#固定目标地址)
   - [No shorthand下的目标地址](#no-shorthand下的目标地址)
-- [使用physical目标模式](#使用physical目标模式)
-  - [2.1 广播IPI消息](#21-广播ipi消息)
-  - [2.2 使用其他交付模式](#22-使用其他交付模式)
-- [3 使用logical目标模式](#3-使用logical目标模式)
+- [physical目标模式的目标地址](#physical目标模式的目标地址)
+  - [广播IPI消息](#广播ipi消息)
+  - [使用其他交付模式](#使用其他交付模式)
+- [logical目标模式的目标地址](#logical目标模式的目标地址)
+  - [LDR](#ldr)
+  - [DFR](#dfr)
 - [4 多处理器的初始化与编程](#4-多处理器的初始化与编程)
   - [4.1 Logical processor的资源](#41-logical-processor的资源)
   - [4.2 Logical processor的初始化](#42-logical-processor的初始化)
@@ -38,7 +41,8 @@ mov DWORD [APIC_BASE + ICR0]，000C4620H   ； 写ICR低32位
 
 **ICR**的**destination shorthand域**设置了总的**目标类型**，**只有No Shorthand目标类型**才需要**提供具体的IPI消息发送对象**。
 
-## 
+## 固定目标地址
+
 在Self、All including self，以及All excluding self**目标类型**中使用**固定的目标对象**。
 
 ## No shorthand下的目标地址
@@ -49,7 +53,7 @@ mov DWORD [APIC_BASE + ICR0]，000C4620H   ； 写ICR低32位
 
 ② **Destination field**（目标域）：这个值对于physical还是logical模式有不同的解释, **提供目标processor地址**。
 
-# 使用physical目标模式
+# physical目标模式的目标地址
 
 physical目标模式需要在**ICR寄存器的destination field域**（高32位）里直接给出**目标处理器的APIC ID值**，如下面的IPI命令字。
 
@@ -132,7 +136,7 @@ do_ap_ipi_handler：
 
 我们看到，使用physical模式是最为简单的一种给目标处理器发送IPI消息的形式。physical模式当然也可以给所有的处理器发送消息。
 
-## 2.1 广播IPI消息
+## 广播IPI消息
 
 在**physical模式**里，当**destination field（目标域**）提供一个**FFh值**时，IPI消息将发送到**所有的处理器（广播IPI消息到system bus上的所有处理器），也包括self（自己**）。
 
@@ -224,7 +228,7 @@ get_lock：
 
 并且有一个现象是，当广播消息包括自已在内，那么显然广播者会最先得到中断消息（可能system bus仲裁时占优）。
 
-## 2.2 使用其他交付模式
+## 使用其他交付模式
 
 在上面的两个示例里，我们使用的都是Fixed交付模式，在**no shorthand目标类型**里，我们可以使用任何其他的交付模式：Fixed模式（000B），SMI模式（010B），NMI模式（100B），INIT模式（101B），以及Start\-up模式（110B）。
 
@@ -232,17 +236,19 @@ get_lock：
 
 其余的这些delivery mode具有很高的优先级别，它们不能被屏蔽，不受IRR、ISR，以及TPR这些寄存器的中断仲裁影响。我们将在后面进行探讨。
 
-# 3 使用logical目标模式
+# logical目标模式的目标地址
 
 当使用logical目标模式时，情况变得稍为复杂，**ICR的destination field（目标域**）并不是直接提供目标处理器的APIC ID值，而是**一个mask值**。
 
-当system bus上的处理器符合（匹配）这个mask值时，它们就是目标处理器，并且可以一次发送多个目标处理器。
+当system bus上的处理器符合（匹配）这个mask值时，它们就是目标处理器，并且可以一次发送**多个目标处理器**。
 
-这个目标处理器的匹配过程，受到LDR（logical destination register）和DFR（destination format register）的影响。实际上，它们定义了处理器的logical ID值，其结构如下。
+这个目标处理器的匹配过程，受到**LDR**（logical destination register）和**DFR**（destination format register）的影响。实际上，它们定义了处理器的**logical ID值**，其结构如下。
 
 ![config](./images/49.png)
 
-每个local APIC可以额外自定义一个逻辑ID值，在LDR（logical destination register）的bit 24～bit 31里提供。8位的local APIC ID值共可以为8个local APIC所使用（每个local APIC占用1位）。
+## LDR
+
+**每个local APIC**可以**额外**自定义一个**逻辑ID值！！！**，在LDR（logical destination register）的bit 24～bit 31里提供。8位的local APIC ID值共可以为**8个local APIC**所使用（每个local APIC占用1位）。
 
 假设当前的system bus上有4个处理器，那么每个处理器的local APIC里可以使用LDR定义一个逻辑ID值，如下所示。
 
@@ -258,11 +264,15 @@ get_lock：
 
 ④ processor #3：逻辑ID为8。
 
-逻辑ID使用mask码方式设置（即每个位可以被mask），每个处理器的逻辑ID值在各自的初始化阶段在LDR设置。
+逻辑ID使用**mask码方式设置**（即每个位可以被mask），**每个处理器**的**逻辑ID值**在**各自的初始化阶段**在LDR设置。
 
 当使用logical目标模式发送IPI消息时，ICR的destination field（目标域）提供一个mask值，这个mask值用来匹配和选择目标处理器。
 
-DFR（destination format register）设置两种匹配模式：flat模式（1111B）和cluster模式（000B）。在flat模式里，当LDR的逻辑ID与IPI消息中的destination field值进行按位AND操作，结果为True时，属于目标处理器。
+## DFR
+
+DFR（destination format register）设置两种匹配模式：**flat模式**（1111B）和**cluster模式**（000B）。
+
+在flat模式里，当LDR的**逻辑ID**与IPI消息中的**destination field值**进行**按位AND**操作，结果为True时，属于目标处理器。
 
 ```x86asm
 ； 下面是发送 IPI
