--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第2篇 KVM虚拟化进阶/第6章 KVM设备高级管理/1. 半虚拟化驱动.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第2篇 KVM虚拟化进阶/第6章 KVM设备高级管理/1. 半虚拟化驱动.md
@@ -749,7 +749,7 @@ kvm\_clock使用**较新的硬件**（如**Intel SandyBridge**平台）提供的
 
 ### 10.2.1. 宿主机CPU flags
 
-物理CPU对constant TSC的支持，可以查看**宿主机**中**CPU信息的标识**，有“constant\_tsc”的就是支持constant TSC的，如下所示（信息来源于运行在Broadwell硬件平台的系统）。
+物理CPU对constant TSC的支持，可以查看**宿主机**中**CPU信息的标识**，有“`constant_tsc`”的就是支持constant TSC的，如下所示（信息来源于运行在Broadwell硬件平台的系统）。
 
 ```
 [root@kvm-host ~]# cat /proc/cpuinfo | grep flags | uniq | grep constant_tsc￼
