--- Auto-Git Commit ---

--- a/Architecture/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第15章 性能监控/1. 性能监控机制.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第15章 性能监控/1. 性能监控机制.md
@@ -4,7 +4,7 @@
 <!-- code_chunk_output -->
 
 - [1. 性能监控机制: 事件监控为核心](#1-性能监控机制-事件监控为核心)
-- [2. architectural与non-architectural性能监控事件](#2-architectural与non-architectural性能监控事件)
+- [2. 性能监控事件分类](#2-性能监控事件分类)
 - [3. 确定处理器的Model](#3-确定处理器的model)
 
 <!-- /code_chunk_output -->
@@ -25,11 +25,11 @@
 
 ② Fixed\-function counter（**固定用途的性能监控计数器**）：Fixed\-function计数器**功能有限**，但使用非常简单。
 
-**软件中可以设定**，当**counter发生溢出**时产生**PMI（Performance Monitoring Interrupt**）或者**PEBS中断**来进行相应处理。**PMI中断**和**PEBS中断**都使用**PMI handler**进行处理。
+**软件中可以设定**，当**counter发生溢出**时产生**PMI！！！（Performance Monitoring Interrupt**）或者**PEBS！！！中断**来进行相应处理。**PMI中断**和**PEBS中断**都使用**PMI handler**进行处理。
 
 **PMI**是**可屏蔽的local APIC中的本地中断源(LVT！！！**)，在**LVT Performance monitor寄存器**中设置。
 
-# 2. architectural与non-architectural性能监控事件
+# 2. 性能监控事件分类
 
 在Intel处理器上，**performance monitoring机制**分为**两大类**。
 
