--- Auto-Git Commit ---

--- a/Architecture/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第15章 性能监控/2. Performance monitoring机制的版本.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第15章 性能监控/2. Performance monitoring机制的版本.md
@@ -74,7 +74,7 @@ CPU:
 
 ![config](./images/2.jpg)
 
-版本ID为4（实际上属于**版本3**），支持4个IA32\_PMC和IA32\_PERFEVTSEL寄存器，分别为**IA32\_PMC0到IA32\_PMC3(！！！**)，IA32\_PERFEVTSEL0到IA32\_PERFEVTSEL3。
+版本ID为4（实际上属于**版本3**），支持4个IA32\_PMC和IA32\_PERFEVTSEL寄存器，分别为`IA32_PMC0`到`IA32_PMC3`，IA32\_PERFEVTSEL0到IA32\_PERFEVTSEL3。
 
 每个IA32\_PMC寄存器有效的宽度为48位，还有3个fixed\-function counter寄存器，它们的宽度也是48位的。
 
@@ -98,7 +98,7 @@ CPU:
 
 ④ 在**Core i7**处理器版本3中支持4个，即IA32\_PMC0到IA32\_PMC3。
 
-`CPUID.0A：EAX[7：0]`的值决定支持**多少个IA32\_PMCx寄存器(！！！**)，`EAX[7：0]`>3表示**最少可支持4个**，因此实际上`EAX[7：0]`=4时（如上所示）并**不意味**着有版本4的出现，它只是表示**支持4个PMC寄存器**。
+`CPUID.0A：EAX[7：0]`的值决定支持多少个`IA32_PMCx`寄存器，`EAX[7：0]`>3表示**最少可支持4个**，因此实际上`EAX[7：0]`=4时（如上所示）并**不意味**着有版本4的出现，它只是表示**支持4个PMC寄存器**。
 
 因此上面的Core i7处理器的版本3，它所返回的version ID值应该为4（支持4个PMC寄存器）。
 
