--- a/Architecture/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第15章 性能监控/3. Nehalem架构下的性能监控机制.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第15章 性能监控/3. Nehalem架构下的性能监控机制.md
@@ -4,7 +4,7 @@
 <!-- code_chunk_output -->
 
 - [1. 概述](#1-概述)
-- [2. 物理资源](#2-物理资源)
+- [2. 支持的物理寄存器](#2-支持的物理寄存器)
 - [3. counter（计数器）](#3-counter计数器)
   - [3.1. IA32_PMCx与IA32_FIXED_CTRx寄存器](#31-ia32_pmcx与ia32_fixed_ctrx寄存器)
   - [3.2. 触发PMI: 通用和固定](#32-触发pmi-通用和固定)
@@ -58,13 +58,13 @@
 
 在这一节里，我们重点关注在**Nehalem架构**的**性能监控机制**，也适用于**后续的Westmere架构**及**SandyBridge架构**。而在**SandyBridge架构**和**IvyBridge架构**里，performance monitor机制进一步得到增强。
 
-在**Nehalem架构**下，处理器支持**版本3**的**性能监控**，从`CPUID.0AH：EAX[7：0]`返回的**ID值是4**，表明支持**4个PMC寄存器（即general\-purpose counter**）。
+在**Nehalem架构**下，处理器支持**版本3**的**性能监控**，从`CPUID.0AH：EAX[7：0]`返回的**ID值是4**，表明支持**4个PMC寄存器**（即`general-purpose counter`）。
 
-# 2. 物理资源
+# 2. 支持的物理寄存器
 
-在**版本3**下，支持下面的物理资源（需要从CPUID 0A leaf里确认）。
+在**版本3**下，支持下面的物理资源（需要从`CPUID 0A leaf`里确认）。
 
-① **4个PMC通用！！！性能监控计数器寄存器**：从IA32\_PMC0到IA32\_PMC3。
+① **4个PMC通用！！！性能监控计数器寄存器**：从`IA32\_PMC0`到`IA32\_PMC3`。
 
 ② 4个**对应的PERFEVTSEL事件选择寄存器**：从`IA32_PERFEVTSEL0`到`IA32_PERFEVTSEL3`。
 
