--- Auto-Git Commit ---

--- a/Architecture/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第15章 性能监控/3. Nehalem架构下的性能监控机制.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第15章 性能监控/3. Nehalem架构下的性能监控机制.md
@@ -6,7 +6,7 @@
 - [1. 概述](#1-概述)
 - [2. 相关的物理寄存器](#2-相关的物理寄存器)
 - [3. counter（计数器）](#3-counter计数器)
-  - [3.1. IA32_PMCx与IA32_FIXED_CTRx寄存器](#31-ia32_pmcx与ia32_fixed_ctrx寄存器)
+  - [3.1. 通用IA32_PMCx与固定IA32_FIXED_CTRx计数寄存器](#31-通用ia32_pmcx与固定ia32_fixed_ctrx计数寄存器)
   - [3.2. 触发PMI: 通用和固定](#32-触发pmi-通用和固定)
   - [3.3. 触发PEBS中断: 通用计数器](#33-触发pebs中断-通用计数器)
 - [4. 开启计数器](#4-开启计数器)
@@ -92,7 +92,7 @@
 
 ② Fixed\-function counter：**固定用途的性能监控计数器**。
 
-## 3.1. IA32_PMCx与IA32_FIXED_CTRx寄存器
+## 3.1. 通用IA32_PMCx与固定IA32_FIXED_CTRx计数寄存器
 
 ![config](./images/4.jpg)
 
@@ -100,9 +100,9 @@
 
 ## 3.2. 触发PMI: 通用和固定
 
-**48位宽**的**IA32\_PMC！！！**和**IA32\_FIXED\_CTR！！！**寄存器**最大计数值**是**0x0000FFFF\_FFFFFFFF**，当达到它们的**最大计数值**，并且从**最大值回绕到0值**时（即**counter产生溢出**），就会**引发PMI（Performance monitoring interrupt）中断**的产生。
+**48位宽**的`IA32_PMC`和`IA32_FIXED_CTR`寄存器**最大计数值**是**0x0000FFFF\_FFFFFFFF**，当达到它们的**最大计数值**，并且从**最大值回绕到0值**时（即**counter产生溢出**），就会**引发PMI（Performance monitoring interrupt）中断**的产生。
 
-注: 只有到达最大计数值溢出才产生中断.
+注: 只有到达**最大计数值溢出**才产生中断.
 
 **通用计数器**和**固定用途计数器**都支持PMI中断。
 
@@ -112,7 +112,7 @@
 
 ## 3.3. 触发PEBS中断: 通用计数器
 
-在Nehalem和Westmere架构下的**4个通用计数器IA32\_PMC0到IA32\_PMC3**可以设置**当计数器溢出**时**触发PEBS中断**，由**IA32\_PEBS\_ENABLE寄存器设置(！！！**)，如下所示。
+在Nehalem和Westmere架构下的**4个通用计数器**`IA32_PMC0`到`IA32_PMC3`可以设置**当计数器溢出**时**触发PEBS中断**，由**IA32\_PEBS\_ENABLE寄存器设置(！！！**)，如下所示。
 
 ![config](./images/5.jpg)
 
