--- Auto-Git Commit ---

--- a/Architecture/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第15章 性能监控/3. Nehalem架构下的性能监控机制.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第15章 性能监控/3. Nehalem架构下的性能监控机制.md
@@ -40,6 +40,7 @@
   - [8.3. 值得注意](#83-值得注意)
 - [9. 全局溢出控制器](#9-全局溢出控制器)
 - [10. 使用Performance monitoring的例子](#10-使用performance-monitoring的例子)
+  - [测试](#测试)
   - [10.1. 开启IA32_PMC0计数器](#101-开启ia32_pmc0计数器)
   - [10.2. 收集信息](#102-收集信息)
   - [10.3. 设置PMI handler](#103-设置pmi-handler)
@@ -126,7 +127,7 @@
 
 # 4. 开启计数器
 
-在**使用这些计数器之前**，需要通过**IA32\_PERF\_GLOBAL\_CTRL寄存器(！！！**)和**各自对应的控制器(！！！**)来设置开启，如下所示。
+在**使用这些计数器之前**，需要通过`IA32_PERF_GLOBAL_CTRL`寄存器和**各自对应的控制器(！！！**)来设置开启，如下所示。
 
 ![config](./images/6.jpg)
 
@@ -370,6 +371,7 @@ wrmsr
 
 我们使用这两个实验测试来了解性能监控是如何运作的。
 
+## 测试
 >实验15\-2：测试IA32\_PMC0计数器
 
 在这个实验里，我们使用IA32\_PMC0计数器统计一个函数执行了多少条指令，这个测试函数如下。
@@ -388,7 +390,7 @@ Foo：
 
 ## 10.1. 开启IA32_PMC0计数器
 
-我们需要对**IA32\_PERF\_GLOBAL\_CTRL**寄存器和**IA32\_PERFEVTSEL0**寄存器进行设置。
+我们需要对`IA32_PERF_GLOBAL_CTRL`寄存器和`IA32_PERFEVTSEL0`寄存器进行设置。
 
 代码清单15-2（topic15\ex15-2\protected.asm）：
 
@@ -408,7 +410,7 @@ Foo：
 
 在**IA32\_PERFEVTSEL0寄存器**里设置的**监控事件是Event select为C0H（指令退出事件**）和**umask值为0**，**USR**和**OS标志**都为**1（监控所有的权限级别**），最重要的是**Enable位为1**。
 
-当对IA32\_PERFEVTSEL0寄存器**执行完WRMSR指令**后，事件监控将**立即生效**。
+当对`IA32_PERFEVTSEL0`寄存器**执行完WRMSR！！！指令**后，事件监控将**立即生效！！！**。
 
 ## 10.2. 收集信息
 
@@ -425,13 +427,13 @@ wrmsr
 call dump_pmc     ； 打印 PMC 计数器
 ```
 
-调用完测试函数后，将**IA32\_PMC0计数器关闭**，再**输出PMC计数器的值**。
+调用完**测试函数**后，将**IA32\_PMC0计数器关闭**，再**输出PMC计数器的值**。
 
 下面是在笔者的Westmere架构Core i5处理器上的运行结果。
 
 ![config](./images/12.jpg)
 
-结果显示，**PMC0的值为0x309**，这个值就是**执行的指令数**，包括了代码清单15-3中的**关闭counter计数器的4条指令**，因此**foo（）函数正确的执行指令数应该是0x305（即773条指令**）。
+结果显示，**PMC0的值为0x309**，这个值就是**执行的指令数！！！**，包括了代码清单15-3中的**关闭counter计数器的4条指令**，因此**foo（）函数正确的执行指令数应该是0x305（即773条指令**）。
 
 我们可以使用**Bochs的调试功能**来**验证是否正确**，下面是Bochs里的调试输出。
 
@@ -461,19 +463,20 @@ Next at t=156693773
 
 ## 10.3. 设置PMI handler
 
-我们需要对PMI的中断服务例程进行设置，如下。
+我们需要对PMI的**中断服务例程进行设置**，如下。
 
 代码清单15-4（topic15\ex15-3\protected.asm）：
 
 ```assembly
-； 设置 APIC PMI handler
+    ;设置 APIC PMI handler
     ;这里定义的APIC_PERFMON_VECTOR是0x33, 在文件inc\protected.inc
     mov esi，APIC_PERFMON_VECTOR
+    ; 中断处理函数
     mov edi，perfmon_handler
     call set_interrupt_handler    ;设置中断服务例程的 vector
 ```
 
-**与一般的中断服务例程设置是相同**的，使用**set\_interrupt\_handler()函数**在**IDT**里设置**相应的interrupt描述符！！！**（这个set\_interrupt\_handler()函数实现在**lib\lib32.asm库代码**里）。
+**与一般的中断服务例程设置是相同**的，使用`set_interrupt_handler()`函数在**IDT**里设置**相应的interrupt描述符！！！**（这个set\_interrupt\_handler()函数实现在**lib\lib32.asm库代码**里）。
 
 ## 10.4. 编写PMI handler
 
