--- Auto-Git Commit ---

--- a/Architecture/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第15章 性能监控/4. PEBS(Precise Event Based Sampling)机制.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第15章 性能监控/4. PEBS(Precise Event Based Sampling)机制.md
@@ -85,7 +85,7 @@ available_pebs_done：
 
 # 2. PEBS buffer
 
-**PEBS buffer**与**BTS buffer**共同组成`DS（Debug Store）`存储区域里的**buffer记录**区，因此与BTS buffer一样，在设置PEBS buffer结构前需要检测PEBS记录的格式。
+**PEBS buffer**与**BTS buffer**共同组成`DS（Debug Store）`存储区域里的**buffer记录**区，因此与BTS buffer一样，在设置PEBS buffer结构前需要**检测PEBS记录的格式**。
 
 ## 2.1. 64位的PEBS记录格式
 
@@ -108,7 +108,7 @@ support_ds64：
       ret
 ```
 
-这个函数在14.9.2节我们已经见过。当支持DS64格式时，BTS记录与PEBS记录都使用64位格式。
+这个函数在14.9.2节我们已经见过。当**支持DS64格式**时，BTS记录与PEBS记录都使用64位格式。
 
 ## 2.2. 增强的PEBS记录格式
 
@@ -211,7 +211,7 @@ PEBS管理区包括**4个counter重置值**，当**由于counter溢出而产生P
 
 触发**PMI和PEBS中断(！！！**)最后都使用**local APIC LVT performance monitor寄存器(！！！**)所**设置的vector指向的中断处理程序(！！！**)。
 
-当**触发PEBS中断**时，处理器将在**PEBS buffer**里写入**一条PEBS记录**，这个PEBS记录按前面所述检测的PEBS格式进行写入。
+当**触发PEBS中断**时，**处理器自动！！！** 将在**PEBS buffer**里写入**一条PEBS记录**，这个PEBS记录按前面所述检测的PEBS格式进行写入。
 
 ## 3.1. 开启PEBS计数器代码
 
@@ -390,15 +390,15 @@ mov eax，3
 
 在上面的情形里，当counter的计数器设置为0FFFF_FFFFFFFDh（48位）值，当开启计数器时，在执行第3条mov指令counter溢出，然而PEBS没有触发。直到继续执行后面的7条mov指令后，PEBS才被触发。因此在这个情形下，笔者无法测量出第1个PEBS事件什么时候到来。
 
-# 6. PEBS记录的报告
+# 6. PEBS记录的两种报告
 
 PEBS记录有**两种报告形式**：**trap**和**fault**。
 
 软件通过读取`IA32_PERF_CAPABILITIES`寄存器的`PEBS_TRAP`（bit 6）标志位可以知道：
 
-① PEBS\_TRAP为1时，使用**trap**类型，**EIP**指向触发PEBS中断指令的**下一条指令地址**
+① `PEBS_TRAP`为1时，使用**trap**类型，**EIP**指向触发PEBS中断指令的**下一条指令地址**
 
-② PEBS\_TRAP为0时，使用**fault**类型，EIP指向**触发PEBS中断指令的地址**
+② `PEBS_TRAP`为0时，使用**fault**类型，EIP指向**触发PEBS中断指令的地址**
 
 IA32\_PERF\_CAPABILITIES寄存器是**只读寄存器**，软件无法决定PEBS使用哪种类型的报告形式。
 
