--- a/Linux/Debug/debug/tools/perf/1. perf简介.md
+++ b/Linux/Debug/debug/tools/perf/1. perf简介.md
@@ -3,41 +3,33 @@
 
 <!-- code_chunk_output -->
 
-- [系统级性能优化](#系统级性能优化)
-- [Perf 编译安装](#perf-编译安装)
-  - [测试](#测试)
-  - [编译](#编译)
-  - [安装](#安装)
-  - [帮助文档](#帮助文档)
-- [Perf简介](#perf简介)
-  - [原理概述](#原理概述)
-    - [简单例子](#简单例子)
-    - [基本原理](#基本原理)
-- [Perf功能概述](#perf功能概述)
-  - [全局性概况](#全局性概况)
-  - [全局细节](#全局细节)
-  - [特定功能分析](#特定功能分析)
-  - [perf record](#perf-record)
-  - [可视化工具perf timechart](#可视化工具perf-timechart)
-- [Perf性能事件](#perf性能事件)
-  - [三种类型性能事件](#三种类型性能事件)
-  - [perf list查看所有性能事件](#perf-list查看所有性能事件)
-  - [性能事件的属性](#性能事件的属性)
-    - [PMI中断和PEBS中断](#pmi中断和pebs中断)
-    - [性能事件的精度级别](#性能事件的精度级别)
-    - [性能事件的属性](#性能事件的属性-1)
-    - [没有预定义字符描述的性能事件](#没有预定义字符描述的性能事件)
-- [Perf top工具](#perf-top工具)
-  - [基本使用方法](#基本使用方法)
-  - [3种用户页面](#3种用户页面)
-  - [4列信息](#4列信息)
-  - [帮助信息](#帮助信息)
-  - [annoate注解功能](#annoate注解功能)
-  - [参数介绍](#参数介绍)
+- [1. 系统级性能优化](#1-系统级性能优化)
+- [2. Perf 编译安装](#2-perf-编译安装)
+  - [2.1. 测试](#21-测试)
+  - [2.2. 编译](#22-编译)
+  - [2.3. 安装](#23-安装)
+  - [2.4. 帮助文档](#24-帮助文档)
+- [3. Perf简介](#3-perf简介)
+  - [3.1. 简单例子](#31-简单例子)
+  - [3.2. 基本原理](#32-基本原理)
+- [4. Perf功能概述](#4-perf功能概述)
+  - [4.1. 全局性概况](#41-全局性概况)
+  - [4.2. 全局细节](#42-全局细节)
+  - [4.3. 特定功能分析](#43-特定功能分析)
+  - [4.4. perf record](#44-perf-record)
+  - [4.5. 可视化工具perf timechart](#45-可视化工具perf-timechart)
+- [5. Perf性能事件](#5-perf性能事件)
+  - [5.1. 三种类型性能事件](#51-三种类型性能事件)
+  - [5.2. perf list查看所有性能事件](#52-perf-list查看所有性能事件)
+  - [5.3. 性能事件的属性](#53-性能事件的属性)
+    - [5.3.1. PMI中断和PEBS中断](#531-pmi中断和pebs中断)
+    - [5.3.2. 性能事件的精度级别](#532-性能事件的精度级别)
+    - [5.3.3. 其他属性](#533-其他属性)
+  - [5.3.4. 没有预定义字符描述的性能事件](#534-没有预定义字符描述的性能事件)
 
 <!-- /code_chunk_output -->
 
-# 系统级性能优化
+# 1. 系统级性能优化
 
 系统级性能优化是指为了提高应用程序对操作系统资源与硬件资源的使用 效率，或者为了提高操作系统对硬件资源的使用效率而进行的代码优化。通过提 高对操作系统资源与硬件资源的利用率，使得应用程序与基础软硬件平台具有更 好的交互性，往往可以显著提升应用程序的执行速度和稳定性。
 
@@ -52,29 +44,29 @@
 
 其中 perf 相比 较于其它工具而言，具有特殊的优势。它不仅开源，而且内置于内核源码树。在 如今 upstream kernel 的开发中，perf 是发展较快的领域之一。
 
-# Perf 编译安装
+# 2. Perf 编译安装
 
 在Linux源码根目录下
 
-## 测试
+## 2.1. 测试
 
 ```
 [root@centos7 linux]# make -C tools/perf -f tests/make
 ```
 
-## 编译
+## 2.2. 编译
 
 ```
 [root@centos7 linux]# make -C tools/perf
 ```
 
-## 安装
+## 2.3. 安装
 
 ```
 [root@centos7 linux]# make -C tools/perf install
 ```
 
-## 帮助文档
+## 2.4. 帮助文档
 
 ```
 man 1 perf
@@ -85,7 +77,7 @@ man 1 perf-report
 man 1 perf-list
 ```
 
-# Perf简介
+# 3. Perf简介
 
 perf是一款Linux性能分析工具。Linux性能计数器是一个新的基于内核的子系统，它提供一个性能分析框架，比如硬件（CPU、PMU(Performance Monitoring Unit)）功能和软件(软件计数器、tracepoint)功能。通过perf，应用程序可以利用PMU、tracepoint和内核中的计数器来进行性能统计。它不但可以分析制定应用程序的性能问题（per thread），也可以用来分析内核的性能问题。
 
@@ -93,11 +85,9 @@ perf是一款Linux性能分析工具。Linux性能计数器是一个新的基于
 
 相关文档: https://elixir.bootlin.com/linux/latest/source/tools/perf/Documentation
 
-## 原理概述
-
 Perf是内置于Linux源代码树中的性能剖析(profiling)工具。它基于**事件采样**原理，以**性能事件**为基础，支持针对处理器相关性能指标与操作系统相关性能指标的性能剖析。可用于性能瓶颈的查找与热点代码的定位。
 
-### 简单例子
+## 3.1. 简单例子
 
 我们先通过一个例子来看看perf究竟能干什么。程序`[pi.c]`是一个简单的计算Pi的CPU密集型程序。很显然，`[pi.c]`的热点在函数`do_pi()`中。
 
@@ -164,7 +154,7 @@ perf top -p $pid
 
 从上图可以看到，在`[pi]`程序执行期间，函数`do_pi()`消耗了62.57%的CPU周期，是消耗处理器周期最多的热点代码。这跟我们预想的一样。
 
-### 基本原理
+## 3.2. 基本原理
 
 那么Perf是怎么做到的呢？
 
@@ -176,7 +166,7 @@ perf top -p $pid
 
 根据上述的perf采样原理可以得知，perf假设两次采样之间，即两次相邻的PMI中断之间系统执行的是同一个进程的同一个函数。这种假设会带来**一定的误差**，当感觉perf给出的**结果不准**时，不妨提高**采样频率**，perf会给出更加精确的结果。
 
-# Perf功能概述
+# 4. Perf功能概述
 
 ![2020-07-20-08-26-42.png](./images/2020-07-20-08-26-42.png)
 
@@ -212,19 +202,19 @@ No.|sub-commands|comment
 26 | probe         |用于定义动态检查点。
 27 | trace         |类似strace功能。
 
-## 全局性概况
+## 4.1. 全局性概况
 
 * perf list查看当前系统支持的性能事件；
 * perf bench对系统性能进行摸底；
 * perf test对系统进行健全性测试；
 * perf stat对全局性能进行统计；
 
-## 全局细节
+## 4.2. 全局细节
 
 * perf top可以实时查看当前系统进程函数占用率情况；
 * perf probe可以自定义动态事件；
 
-## 特定功能分析
+## 4.3. 特定功能分析
 
 perf kmem针对slab子系统性能分析；
 perf kvm针对kvm虚拟化分析；
@@ -233,7 +223,7 @@ perf mem分析内存slab性能；
 perf sched分析内核调度器性能；
 perf trace记录系统调用轨迹；
 
-## perf record
+## 4.4. perf record
 
 最常用功能perf record，可以系统全局，也可以具体到**某个进程**，更甚具体到**某一进程某一事件**；可宏观，也可以很微观。
 
@@ -245,16 +235,16 @@ perf trace记录系统调用轨迹；
 * perf archive将相关符号打包，方便在其它机器进行分析；
 * perf script将perf.data输出可读性文本；
 
-## 可视化工具perf timechart
+## 4.5. 可视化工具perf timechart
 
 perf timechart record记录事件；
 perf timechart生成output.svg文档；
 
-# Perf性能事件
+# 5. Perf性能事件
 
 完整的性能事件列表见Intel手册`Performance Monitoring Events`
 
-## 三种类型性能事件
+## 5.1. 三种类型性能事件
 
 利用perf剖析程序性能时，需要指定**当前测试**的**性能事件**。性能事件是指在**处理器**或**操作系统**中发生的，可能影响到程序性能的硬件事件或软件事件。比如Cache丢失，流水线停顿，页面交换等。这些事件会对程序的执行时间造成较大的负面影响。在优化代码时，应尽可能减少此类事件发生。
 
@@ -266,7 +256,7 @@ perf定义的性能事件分为3类，分别是硬件性能事件、软件性能
 - Software Event是**内核产生的事件**，分布在各个功能模块中，统计和操作系统相关性能事件。比如进程切换，tick数等。
 - Tracepoint Event是内核中**静态tracepoint所触发的事件**，这些tracepoint用来判断程序运行期间内核的行为细节（这些tracepint的对应的sysfs节点在`/sys/kernel/debug/tracing/events`目录下）。比如slab分配器的分配次数等。
 
-## perf list查看所有性能事件
+## 5.2. perf list查看所有性能事件
 
 不同型号的 CPU 支持的硬件性能事件不尽相同。不同版本的内核提供的软件 性能事件与 Tracepoint events 也不尽相同。因此，perf提供了list工具以查看当前软硬件平台支持的性能事件列表。
 
@@ -284,9 +274,9 @@ perf list
 
 ![2020-07-19-21-06-38.png](./images/2020-07-19-21-06-38.png)
 
-## 性能事件的属性
+## 5.3. 性能事件的属性
 
-### PMI中断和PEBS中断
+### 5.3.1. PMI中断和PEBS中断
 
 **硬件性能事件**由处理器的PMU提供支持。
 
@@ -302,7 +292,7 @@ perf list
 perf top -e cycles:pp
 ```
 
-### 性能事件的精度级别
+### 5.3.2. 性能事件的精度级别
 
 Perf 在采样精度上定义了 4 个级别.
 
@@ -315,7 +305,7 @@ Level | Comment
 
 目前X86处理器，包括Intel处理器与AMD处理器Jun仅能实现前3个精度级别。
 
-### 性能事件的属性
+### 5.3.3. 其他属性
 
 除了精度级别以外，事件还具有其他几个属性，均可以通过"event:X"的方式予以指定。
 
@@ -328,7 +318,7 @@ G | 在KVM虚拟机中，仅攻击Guest系统触发的性能事件。
 H | 仅统计Host系统触发的性能事件。
 p | 精度级别。
 
-### 没有预定义字符描述的性能事件
+## 5.3.4. 没有预定义字符描述的性能事件
 
 另外需要补充的是，perf list工具仅列出了具有字符描述的**硬件性能事件**。而那些**没有预定义字符描述的性能事件**，也可以通过特殊方式使用。
 
@@ -349,183 +339,3 @@ perf stat -e r010b ls
 ```
 
 所以完整的性能事件列表见Intel手册`Performance Monitoring Events`
-
-# Perf top工具
-
-top工具主要用于**实时剖析各个函数**在**某个性能事件**上的热度。利用perf top，能够直观地观察到当前的热点函数，并利用工具中内置的annotate功能，进一步查找特点指令。
-
-![2020-07-19-23-19-20.png](./images/2020-07-19-23-19-20.png)
-
-## 基本使用方法
-
-perf top的基本使用方法为：
-
-```
-perf top
-```
-
-该命令以**默认性能事件**"cycles（CPU周期数）"进行全系统的性能剖析，检测系统中的所有应用程序函数与内核函数的热度。
-
-## 3种用户页面
-
-perf提供了**3种用户页面**，分别是**tui**、**gtk**以及**tty**。其中可操作性最强，功能最丰富的界面是**tui**。
-
-本文主要基于此界面讲解 perf。top 工具仅支持 tui 与 tty，默认界面为 tui。上图中展示的就是 tui 界面。
-
-需要提一下的是，必须在系统安装 newt 软件包，perf 才能使能 tui 界面。
-
-## 4列信息
-
-top工具的界面具有4列信息。
-
-右边第一列为**符号名**，也就是**函数名**。
-
-左边第一列为该符号引发的性能事件在**整个检测域**中占的比例，我们将其称为该符号的**热度**。检测域是指perf监控的所有符号。默认情况下包括系统中**所有进程**、**内核**以及**内核模块的函数**。
-
-左边第二列为该符号所在的**DSO**。**DSO**即**动态共享对象**（Dynamic Shared Object）的缩写。
-
-第三列为**DSO的类型**。perf中DSO共有**5种类型**，分别是：**ELF可执行文件**，**动态链接库**，**内核**，**内核模块**和**VDSO**。当第三列为`[.]`时表示此符号属于**用户态的ELF文件**（包括可执行文件与动态链接库）。为`[k]`表示此符号属于**内核与内核模块**。
-
-## 帮助信息
-
-在tui界面下按'h','?'或'F1'键时，会弹出一个帮助窗口，如下图所示。
-
-![2020-07-19-23-23-09.png](./images/2020-07-19-23-23-09.png)
-
-帮助窗口列出了**perf top**的**所有功能**。
-
-## annoate注解功能
-
-我们首先来看注解（**Annoate**）功能。注解功能可以**进一步深入分析某个符号**。给出**对应线程**的**代码**并且为**热点代码**标记出它们触发的性能事件在**整个测试域**中的**百分比**。
-
-下面让我们来看一下如何使用注解功能。
-
-在界面上按**上下键**，将光标在各个symbol间移动。选定**某个符号后**，按下**a键**，得到如下的界面。
-
-![image](./images/0x05.png)
-
-上图显示的是`[pi]`程序中`do_pi()`函数的**注解**。从图上可以看到perf对`do_pi()`中的C代码给出了汇编语言的注解。并且给出了各条指令的采样率。从上图可以看到**耗时较多的指令**（如访存指令）比较容易被perf采到。
-
-选定**某个符号**后按下热键'd'，perf会**过滤掉**所有**不属于此DSO的文件**。符号`do_pi`归属的DSO为**thread**。当在符号`do_pi`上按下'd'键后，perf过滤掉了所有不属于thread的符号。如下图所示。
-
-![image](./images/0x06.png)
-
-类似于热键'd'，热键't'能够过滤**所有不属于当前符号所属线程的符号**。
-
-热键'P'可以将pref top的当前显示的信息输出到文件perf.hist.X中。
-
-## 参数介绍
-
-Perf top的参数较多，本文只介绍几个常用的参数的使用方法。
-
-* `'-e'` or `'--event' <event>`: 该参数用于**指定分析的性能事件**。默认情况下, cycles（CPU周期数）
-
-可分析的性能事件可以参考**perf list**。
-
-例如：我们希望利用top工具剖析系统中**Cache丢失次数**，可以采用以下命名：
-
-```
-perf top -e cache-misses
-```
-
-* `'-c'` or `'--count' <n>`: 该参数用于指定性能计数器的**采样周期**。默认情况下，**每秒采样4000次**。
-
-* `'-p'` or `'--pid' <pid>`: 该参数用于指定分析**进程的pid**。指定pid后，perf top仅分析**目标进程**以及**目标进程创建的线程**。
-
-* `'-t'` or `'--tid' <tid>`: 该参数用于指定分析**线程的tid**。指定tid后，perf top仅分析**目标线程**，**不包括**此线程**创建的其他线程**。
-
-* `'-a'` or `'--all-cpus'`: 采集系统中**所有CPU产生的性能事件**。这就是perf top的**默认情况**。
-
-* `'-C'` or `'--cpu' <cpu>`: 指定**待分析的CPU列表**。
-
-如果系统中有4个CPU，如果仅需采集CPU0与CPU3的数据，可通过如下方法调用perf top：
-
-```
-perf top -C 0,3
-```
-
-* `'-k'` or `'--vmlinux' <file>`: 指定**带符号表的内核映像**所在的路径。
-
-与GDB类似，perf只有在**DSO存在符号表**的情况下才能解析出**IP对应的具体符号**。
-
-Perf通常采用以下顺序加载**内核符号**：
-
-1. /proc/kallsyms
-2. 用户通过'-k'参数指定的路径
-3. 当前路径下的"vmlinux"文件
-4. /boot/vmlinux
-5. /boot/vmlinux-$(uts.release)
-6. /lib/modules/$(uts.release)/build/vmlinux
-7. /usr/lib/debug/lib/modules/$(uts.release)/build/vmlinux
-
-* `'-K'` or `'--hide_kernel_symbols'`: 不显示属于内核的符号。对于只想分析应用程序的用户而言，使用此参数后，perf top的界面会清爽很多。
-
-* `'-m'` or `'--mmap-pages' <n> `: 指定perf开辟的mmap页面的数量。mmap缓存主要用于用户空间与内核空间的数据通信。perf在内核中驱动将采集到的性能数据存入ring buffer，用户空间的分析程序则通过mmap机制从ring buffer中读取数据。
-
-默认情况下，mmap的页面数量为128，此时mmap内存区域的大小为512KB。perf top默认每个2s读取一次性能数据，当内核生成性能数据的速度过快时，就可能因为缓冲区满导致数据丢失，从而影响到分析结果。在此情况下，用户可以通过'-m'参数扩大缓冲区，以避免性能数据的大量丢失。
-
-* '-r' or '--realtime' <n> <n>：指定分析程序的实时优先级。如上文所述，如果perf分析程序读取数据的速度长期小于内核生成数据的速度时，就可能导致采样数据的大量丢失，影响分析精度。在系统负载过高时，分析程序可能会因为调度延迟过高而不能及时读取数据。因此，在高负载系统中可以通过参数'-r'将分析程序设置为实时进程，并为其设定较高的优先级。
-> $> perf top -r 0
-
-*上述命令中，0即为指定给分析程序的实时优先级。顺便说一句，Linux中实时优先级的范围是[0,99]，其中优先级0最高。不要与范围是[-20,19]的nice值搞混。
-
-* '-d' or '--delay' <n>：指定perf top页面的刷新周期，<n>的单位为妙。默认值为2s。
-
-* '-D' or '--dump-symtab' ：打印DSO的符号表，此功能主要用于perf自身的调试。该参数仅与'--stdio'（即TTY界面）配合使用时才起作用。启用此参数后，perf top会在退出时打印所有DSO的符号表。
-
-* '-f' or '--count-filter' <n>：此参数主要用于符号过滤。指定此参数后，页面上将仅显示采样数大于<n>的符号。
-
-* '-g' or '--group'：将计数器组合成计数器组。Perf在默认情况下会为每个计数器创建一个独立的ring buffer。如果将计数器组合成计数器组，perf则会将所有counter的数据输出到group leader的ring buffer中。当内核生成采样数据不多并且内存较为紧张时，可采用此参数以节省内存。
-
-* '-i' or '--inherit'：采用此参数后，子进程将自动集成父进程的性能事件。从而使得perf能够采集到动态创建的进程的性能数据。但是当采用'-p'参数仅分析特定进程的性能数据时，继承机制会被禁用。这主要是出于性能的考虑。
-
-* '--sym-annotate' <symbol name>：指定待解析的符号名。
-
-* '-z' or '--zero'：更新页面的数据后，清除历史信息。
-
-* '-F' or '--freq' <n>：指定采样频率，此参数与'-c'参数指定一个即可。两个参数同时指定时，perf仅使用'-c'指定的值作为采样周期。
-
-* '-E' or '--entries' <n>：指定页面上的符号数。如果用户仅希望查看top <n>个符号，可以通过此参数实现。
-
-* '-U' or '--hide_user_symbols'：仅显示属于内核的符号，隐藏属于用户空间的符号，即类型为[.]的符号。
-
-* '--tui'：使用tui界面。tui为perf top的默认界面。如前所述，tui界面需要newt软件包的支持。如果用户打开perf top后，出现的不是tui界面，请检查系统中是否已安装newt包。
-
-* '--stdio'：使用TTY页面。当系统中未装newt软件包时，此界面为默认界面。
-
-* '-v' or '--verbose'：显示冗余信息，如符号地址、符号类型（全局、局部、用户、内核等）。
-
-* '-s' or '--sort' <key[,key2]...>：指定界面显示的信息，以及这些信息的排序。
-
-Perf提供的备选信息有：
-
-option | comment
----|---
-Comm | 触发事件的进程名
-PID | 触发事件的进程号
-DOS | 符号所属的DSO的名称
-Symbol | 符号名
-Parent | 调用路径的入口
-
-* 当采用如下命令时，perf top会给出更加丰富的信息。
-> $> perf top -s comm,pid,dso,parent,symbol
-
-* '-n' or '--show-nr-samples'：显示每个符号对应的采样数量。
-> $> perf top -n 
-
-* '--show-total-period'：在界面上显示符号对应的性能事件总数。性能事件计数器在溢出时才会触发一次采样。两次采样之间的计数值即为这段事件内发生的事件总数，perf将其称之为周期（period）。
-
-* 使用方法为：
-
-> $>perf top --show-total-period
-
-* '-g' or '--call-graph' ：在界面上显示函数的调用图谱。
-
-* '--dsos' <dso_name[,dso_name...]>：仅显示dos名为dos_name的符号。可以同时指定多个dso，各个dso名字之间通过逗号隔开。
-
-* '--comms' <comm[,comm...]>：仅显示属于进程"comm"的符号。
-
-* '--symbols' <symbol[,symbol...]>：仅显示指定的符号。
-
-* '-M' or '--disassembler-style'：显示符号注解时，可以通过此参数指定汇编语言的风格。
-
