--- a/Linux/Debug/debug/tools/perf/2. perf top.md
+++ b/Linux/Debug/debug/tools/perf/2. perf top.md
@@ -129,16 +129,19 @@ Perf通常采用以下顺序加载**内核符号**：
 
 默认情况下，mmap的页面数量为128，此时mmap内存区域的大小为512KB。perf top默认每个2s读取一次性能数据，当内核生成性能数据的速度过快时，就可能因为缓冲区满导致数据丢失，从而影响到分析结果。在此情况下，用户可以通过'-m'参数扩大缓冲区，以避免性能数据的大量丢失。
 
-* '-r' or '--realtime' <n> <n>：指定分析程序的实时优先级。如上文所述，如果perf分析程序读取数据的速度长期小于内核生成数据的速度时，就可能导致采样数据的大量丢失，影响分析精度。在系统负载过高时，分析程序可能会因为调度延迟过高而不能及时读取数据。因此，在高负载系统中可以通过参数'-r'将分析程序设置为实时进程，并为其设定较高的优先级。
-> $> perf top -r 0
+* `'-r'` or `'--realtime' <n>`：指定分析程序的实时优先级。如上文所述，如果perf分析程序读取数据的速度长期小于内核生成数据的速度时，就可能导致采样数据的大量丢失，影响分析精度。在系统负载过高时，分析程序可能会因为调度延迟过高而不能及时读取数据。因此，在高负载系统中可以通过参数'-r'将分析程序设置为实时进程，并为其设定较高的优先级。
 
-*上述命令中，0即为指定给分析程序的实时优先级。顺便说一句，Linux中实时优先级的范围是[0,99]，其中优先级0最高。不要与范围是[-20,19]的nice值搞混。
+```
+perf top -r 0
+```
 
-* '-d' or '--delay' <n>：指定perf top页面的刷新周期，<n>的单位为妙。默认值为2s。
+上述命令中，0即为指定给分析程序的实时优先级。顺便说一句，Linux中实时优先级的范围是`[0,99]`，其中优先级0最高。不要与范围是`[-20,19]`的nice值搞混。
 
-* '-D' or '--dump-symtab' ：打印DSO的符号表，此功能主要用于perf自身的调试。该参数仅与'--stdio'（即TTY界面）配合使用时才起作用。启用此参数后，perf top会在退出时打印所有DSO的符号表。
+* `'-d'` or `'--delay' <n>`：指定perf top页面的刷新周期，<n>的单位为妙。默认值为2s。
 
-* '-f' or '--count-filter' <n>：此参数主要用于符号过滤。指定此参数后，页面上将仅显示采样数大于<n>的符号。
+* `'-D'` or `'--dump-symtab'`：打印DSO的符号表，此功能主要用于perf自身的调试。该参数仅与`'--stdio'`（即TTY界面）配合使用时才起作用。启用此参数后，perf top会在退出时打印所有DSO的符号表。
+
+* `'-f'` or '--count-filter' <n>：此参数主要用于符号过滤。指定此参数后，页面上将仅显示采样数大于<n>的符号。
 
 * '-g' or '--group'：将计数器组合成计数器组。Perf在默认情况下会为每个计数器创建一个独立的ring buffer。如果将计数器组合成计数器组，perf则会将所有counter的数据输出到group leader的ring buffer中。当内核生成采样数据不多并且内存较为紧张时，可采用此参数以节省内存。
 
