--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/1. perf简介.md
+++ b/Linux/Debug/debug/tools/perf/1. perf简介.md
@@ -263,7 +263,15 @@ perf定义的性能事件分为3类，分别是硬件性能事件、软件性能
 使用方法如下：
 
 ```
-perf list
+# ./perf list -h
+
+ Usage: perf list [<options>] [hw|sw|cache|tracepoint|pmu|sdt|event_glob]
+
+    -d, --desc            Print extra event descriptions. --no-desc to not print.
+    -v, --long-desc       Print longer event descriptions.
+        --debug           Enable debugging output
+        --deprecated      Print deprecated events.
+        --details         Print information on the perf event names and expressions used internally by events.
 ```
 
 执行命令后，perf将给出当前软硬件平台的所有性能事件。输出结果如下图所示。每行后面括弧里的信息表示该事件是**硬件事件**、**软件事件**还是Tracepoint events。
