--- a/Linux/Debug/debug/tools/perf/2. perf top.md
+++ b/Linux/Debug/debug/tools/perf/2. perf top.md
@@ -141,11 +141,11 @@ perf top -r 0
 
 * `'-D'` or `'--dump-symtab'`：打印DSO的符号表，此功能主要用于perf自身的调试。该参数仅与`'--stdio'`（即TTY界面）配合使用时才起作用。启用此参数后，perf top会在退出时打印所有DSO的符号表。
 
-* `'-f'` or '--count-filter' <n>：此参数主要用于符号过滤。指定此参数后，页面上将仅显示采样数大于<n>的符号。
+* `'-f'` or `'--count-filter' <n>`：此参数主要用于符号过滤。指定此参数后，页面上将仅显示采样数大于<n>的符号。
 
-* '-g' or '--group'：将计数器组合成计数器组。Perf在默认情况下会为每个计数器创建一个独立的ring buffer。如果将计数器组合成计数器组，perf则会将所有counter的数据输出到group leader的ring buffer中。当内核生成采样数据不多并且内存较为紧张时，可采用此参数以节省内存。
+* `'-g'` or `'--group'`：将计数器组合成计数器组。Perf在默认情况下会为每个计数器创建一个独立的ring buffer。如果将计数器组合成计数器组，perf则会将所有counter的数据输出到group leader的ring buffer中。当内核生成采样数据不多并且内存较为紧张时，可采用此参数以节省内存。
 
-* '-i' or '--inherit'：采用此参数后，子进程将自动集成父进程的性能事件。从而使得perf能够采集到动态创建的进程的性能数据。但是当采用'-p'参数仅分析特定进程的性能数据时，继承机制会被禁用。这主要是出于性能的考虑。
+* `'-i'` or `'--inherit'`：采用此参数后，子进程将自动集成父进程的性能事件。从而使得perf能够采集到动态创建的进程的性能数据。但是当采用'-p'参数仅分析特定进程的性能数据时，继承机制会被禁用。这主要是出于性能的考虑。
 
 * '--sym-annotate' <symbol name>：指定待解析的符号名。
 
