--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/1. perf简介.md
+++ b/Linux/Debug/debug/tools/perf/1. perf简介.md
@@ -12,6 +12,8 @@
 - [3. Perf简介](#3-perf简介)
   - [3.1. 简单例子](#31-简单例子)
   - [3.2. 基本原理](#32-基本原理)
+  - [工作原理](#工作原理)
+    - [Symbols](#symbols)
 - [4. Perf功能概述](#4-perf功能概述)
   - [4.1. 全局性概况](#41-全局性概况)
   - [4.2. 全局细节](#42-全局细节)
@@ -46,7 +48,7 @@
 
 # 2. Perf 编译安装
 
-在Linux源码根目录下
+在内核源码包中的位置 tools/perf。
 
 ## 2.1. 测试
 
@@ -165,6 +167,28 @@ perf top -p $pid
 内核会将收集到的sample放入用于跟**用户空间**通信的Ring Buffer。**用于空间**的perf分析程序采用**mmap机制**从ring buffer中读入采样，并对其解析。perf根据**pid**, comm等信息可以找到对应的进程。根据**IP**与**ELF文件**中的**符号表**可以查找到触发PMI中断的指令所在的函数。为了能够使perf读到函数名，我们的目标程序必须具备符号表。如果perf在分析结果中**只看到一串地址**，而**没有对应的函数名**时，通常是由于在**编译时**利用**strip**删除了ELF文件中的符号信息。建议在性能剖析阶段，保留程序中的sysbol table与debug info等信息。
 
 根据上述的perf采样原理可以得知，perf假设两次采样之间，即两次相邻的PMI中断之间系统执行的是同一个进程的同一个函数。这种假设会带来**一定的误差**，当感觉perf给出的**结果不准**时，不妨提高**采样频率**，perf会给出更加精确的结果。
+
+## 工作原理
+
+perf利用Linux的trace特性，可以用于实时跟踪，统计event计数(perf stat)；或者使用采样(perf record)，报告(perf report|script|annotate)的使用方式进行诊断。
+
+perf命令行接口并不能利用所有的Linux trace特性，有些trace需要通过ftrace接口得到。
+
+参考 https://github.com/brendangregg/perf-tools
+
+![2020-07-20-09-42-57.png](./images/2020-07-20-09-42-57.png)
+
+这张图大致列出了perf支持的跟踪事件，从kernerl到user space，支持块设备、网络、CPU、文件系统、内存等，同时还支持系统调用，用户库的事件跟踪。
+
+我们看到perf支持这么多的事件和trace，它依赖了很多的接口来干这件事情。
+
+### Symbols
+
+没有符号表，无法将内存地址翻译成函数和变量名。
+
+例如，无符号表的跟踪显示如下
+
+https://developer.aliyun.com/article/65255
 
 # 4. Perf功能概述
 
