--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/1. perf简介.md
+++ b/Linux/Debug/debug/tools/perf/1. perf简介.md
@@ -192,6 +192,8 @@ https://developer.aliyun.com/article/65255
 
 # 4. Perf功能概述
 
+perf 命令用法还是挺简单的，根据功能区分了COMMAND，每个COMMAND有各自的用法。
+
 ![2020-07-20-08-26-42.png](./images/2020-07-20-08-26-42.png)
 
 Perf是一个包含27种子工具的工具集，功能很全面。
