--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/2. perf top.md
+++ b/Linux/Debug/debug/tools/perf/2. perf top.md
@@ -141,29 +141,38 @@ perf top -r 0
 
 * `'-D'` or `'--dump-symtab'`：打印DSO的符号表，此功能主要用于perf自身的调试。该参数仅与`'--stdio'`（即TTY界面）配合使用时才起作用。启用此参数后，perf top会在退出时打印所有DSO的符号表。
 
+```
+perf top --stdio -D
+```
+
+![2020-07-20-10-01-23.png](./images/2020-07-20-10-01-23.png)
+
+图中给出了 perf top 输出的符号表的片段，这些符号来自于 ELF 文件’thread’
+的 symtable section。符号表的第一列为该符号的地址范围。第二列表示该符号的属性，如’g’表示全局符号，’l’表示局部符号等。
+
 * `'-f'` or `'--count-filter' <n>`：此参数主要用于符号过滤。指定此参数后，页面上将仅显示采样数大于<n>的符号。
 
 * `'-g'` or `'--group'`：将计数器组合成计数器组。Perf在默认情况下会为每个计数器创建一个独立的ring buffer。如果将计数器组合成计数器组，perf则会将所有counter的数据输出到group leader的ring buffer中。当内核生成采样数据不多并且内存较为紧张时，可采用此参数以节省内存。
 
 * `'-i'` or `'--inherit'`：采用此参数后，子进程将自动集成父进程的性能事件。从而使得perf能够采集到动态创建的进程的性能数据。但是当采用'-p'参数仅分析特定进程的性能数据时，继承机制会被禁用。这主要是出于性能的考虑。
 
-* '--sym-annotate' <symbol name>：指定待解析的符号名。
+* `'--sym-annotate' <symbol name>`：指定待解析的符号名。
 
-* '-z' or '--zero'：更新页面的数据后，清除历史信息。
+* `'-z'` or `'--zero'`：更新页面的数据后，清除历史信息。
 
-* '-F' or '--freq' <n>：指定采样频率，此参数与'-c'参数指定一个即可。两个参数同时指定时，perf仅使用'-c'指定的值作为采样周期。
+* `'-F'` or `'--freq' <n>`：指定采样频率，此参数与'-c'参数指定一个即可。两个参数同时指定时，perf仅使用'-c'指定的值作为采样周期。
 
-* '-E' or '--entries' <n>：指定页面上的符号数。如果用户仅希望查看top <n>个符号，可以通过此参数实现。
+* `'-E'` or `'--entries' <n>`：指定页面上的符号数。如果用户仅希望查看top <n>个符号，可以通过此参数实现。
 
-* '-U' or '--hide_user_symbols'：仅显示属于内核的符号，隐藏属于用户空间的符号，即类型为[.]的符号。
+* `'-U'` or `'--hide_user_symbols'`：仅显示属于内核的符号，隐藏属于用户空间的符号，即类型为[.]的符号。
 
-* '--tui'：使用tui界面。tui为perf top的默认界面。如前所述，tui界面需要newt软件包的支持。如果用户打开perf top后，出现的不是tui界面，请检查系统中是否已安装newt包。
+* `'--tui'`：使用tui界面。tui为perf top的默认界面。如前所述，tui界面需要newt软件包的支持。如果用户打开perf top后，出现的不是tui界面，请检查系统中是否已安装newt包。
 
-* '--stdio'：使用TTY页面。当系统中未装newt软件包时，此界面为默认界面。
+* `'--stdio'`：使用TTY页面。当系统中未装newt软件包时，此界面为默认界面。
 
-* '-v' or '--verbose'：显示冗余信息，如符号地址、符号类型（全局、局部、用户、内核等）。
+* `'-v'` or `'--verbose'`：显示冗余信息，如符号地址、符号类型（全局、局部、用户、内核等）。
 
-* '-s' or '--sort' <key[,key2]...>：指定界面显示的信息，以及这些信息的排序。
+* `'-s'` or `'--sort' <key[,key2]...>`：指定界面显示的信息，以及这些信息的排序。
 
 Perf提供的备选信息有：
 
@@ -175,25 +184,46 @@ DOS | 符号所属的DSO的名称
 Symbol | 符号名
 Parent | 调用路径的入口
 
-* 当采用如下命令时，perf top会给出更加丰富的信息。
-> $> perf top -s comm,pid,dso,parent,symbol
+当采用如下命令时，perf top会给出更加丰富的信息。
 
-* '-n' or '--show-nr-samples'：显示每个符号对应的采样数量。
-> $> perf top -n 
+```
+perf top -s comm,pid,dso,parent,symbol
+```
 
-* '--show-total-period'：在界面上显示符号对应的性能事件总数。性能事件计数器在溢出时才会触发一次采样。两次采样之间的计数值即为这段事件内发生的事件总数，perf将其称之为周期（period）。
+![2020-07-20-10-06-42.png](./images/2020-07-20-10-06-42.png)
+
+从图可以查看更丰富的信息，各行信息的意义与上述命令中个字段的排
+序相对应。
+
+* `'-n'` or `'--show-nr-samples'`：显示**每个符号**对应的**采样数量**。
+
+```
+perf top -n 
+```
+
+![2020-07-20-10-08-38.png](./images/2020-07-20-10-08-38.png)
+
+图上的第二列为本行的符号在本轮分析中对应的采样数量
+
+* `'--show-total-period'`：在界面上显示符号对应的**性能事件总数**。性能事件计数器在溢出时才会触发一次采样。两次采样之间的计数值即为这段事件内发生的事件总数，perf将其称之为周期（period）。
 
 * 使用方法为：
 
-> $>perf top --show-total-period
+```
+perf top --show-total-period
+```
 
-* '-g' or '--call-graph' ：在界面上显示函数的调用图谱。
+![2020-07-20-10-10-41.png](./images/2020-07-20-10-10-41.png)
 
-* '--dsos' <dso_name[,dso_name...]>：仅显示dos名为dos_name的符号。可以同时指定多个dso，各个dso名字之间通过逗号隔开。
+图上的第二列即为该行符号在本轮分析中对应的事件总数。
 
-* '--comms' <comm[,comm...]>：仅显示属于进程"comm"的符号。
+* `'-g'` or `'--call-graph'`：在界面上显示函数的调用图谱。
 
-* '--symbols' <symbol[,symbol...]>：仅显示指定的符号。
+* `'--dsos' <dso_name[,dso_name...]>`：仅显示dos名为dos_name的符号。可以同时指定多个dso，各个dso名字之间通过逗号隔开。
 
-* '-M' or '--disassembler-style'：显示符号注解时，可以通过此参数指定汇编语言的风格。
+* `'--comms' <comm[,comm...]>`：仅显示属于进程"comm"的符号。
+
+* `'--symbols' <symbol[,symbol...]>`：仅显示指定的符号。
+
+* `'-M'` or `'--disassembler-style'`：显示符号注解时，可以通过此参数指定汇编语言的风格。
 
