--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/2. perf top.md
+++ b/Linux/Debug/debug/tools/perf/2. perf top.md
@@ -240,7 +240,6 @@ perf top --show-total-period
 下面通过一个简单的程序观察一下 perf top 如何显示调用图谱。
 
 ```cpp
-
 #include <stdio.h>
 #include <math.h>
 #include <sys/types.h>
@@ -260,7 +259,7 @@ int do_pi(int p)
         sum += 4.0 / (1.0 + pow(x,2));
     }
 
-    mypi = h *sum;
+    mypi = h * sum;
     return 0;
 }
 
@@ -269,20 +268,67 @@ int bk()
     do_pi(0);
 }
 
+int ak()
+{
+    double mypi, h, sum, x;
+    long long n, i;
+
+    n = 500000;
+    h = 1.0/n;
+    sum = 0.0;
+
+    for (i = 1; i <= n; i++) {
+        x = h * (i - 0.5);
+        sum += 4.0 / (1.0 + pow(x,2));
+    }
+
+    mypi = h * sum;
+    bk();
+}
+
+int b()
+{
+    do_pi(1); 
+}
+
+int a()
+{
+    b(); 
+}
+
 int main(void)
 {
-    double pi;
-
+    pid_t pid;
     printf("pid: %d\n", getpid());
-    sleep(5);
 
-    if (!do_pi(&pi)) {
-        printf("PI is %f\n", pi);
+    pid = fork();
+
+    if (pid==0) {
+        ak();
     }
+    
+    a();
+
     return 0;
 }
 ```
 
+上面是一个多进程程序，**主进程**通过 `main()‐>a()‐>b()‐>do_pi()`这条路径最终调用了`do_pi()`，**子进程**则通过 `main()‐>ak()‐>bk()‐>do_pi()`这条路径最终调用了
+`do_pi()`。
+
+```
+gcc pi2.c -lm -o pi
+```
+
+在系统中运行后，执行下述命令:
+
+```
+perf top –g
+```
+
+![2020-07-20-10-28-06.png](./images/2020-07-20-10-28-06.png)
+
+从图上可以看到，与普通的 perf top 界面相比，每行的最左面多了一个`’+’`号，表示此符号可以展开函数调用图谱。将焦点定位在符号 `do_pi` 后，通过**回车键**，即可展开`do_pi()`的调用图谱。展开以后，perf top 会在每条调用路径前 显示相应的采样率，表示有多少采样是由该条路径触发的。在图 12 中，共有 2 条路径调用了 do_pi()，分别是 main()‐>a()‐>b()‐>do_pi()与 main()‐>ak()‐>bk()‐>do_pi()。这两条路径的采样率分别是 50.18%与 49.82%。对于 复杂的软件而言，函数调用图谱为更加深入的性能分析提供了途径。我们不仅能 够直观地查找热点函数，还能够进一步直观地查找到使得该函数成为热点的代码 路径。
 
 * `'--dsos' <dso_name[,dso_name...]>`：仅显示dos名为dos_name的符号。可以同时指定多个dso，各个dso名字之间通过逗号隔开。
 
