--- a/Linux/Debug/debug/tools/perf/2. perf top.md
+++ b/Linux/Debug/debug/tools/perf/2. perf top.md
@@ -328,7 +328,15 @@ perf top –g
 
 ![2020-07-20-10-28-06.png](./images/2020-07-20-10-28-06.png)
 
-从图上可以看到，与普通的 perf top 界面相比，每行的最左面多了一个`’+’`号，表示此符号可以展开函数调用图谱。将焦点定位在符号 `do_pi` 后，通过**回车键**，即可展开`do_pi()`的调用图谱。展开以后，perf top 会在每条调用路径前 显示相应的采样率，表示有多少采样是由该条路径触发的。在图 12 中，共有 2 条路径调用了 do_pi()，分别是 main()‐>a()‐>b()‐>do_pi()与 main()‐>ak()‐>bk()‐>do_pi()。这两条路径的采样率分别是 50.18%与 49.82%。对于 复杂的软件而言，函数调用图谱为更加深入的性能分析提供了途径。我们不仅能 够直观地查找热点函数，还能够进一步直观地查找到使得该函数成为热点的代码 路径。
+从图上可以看到，与普通的 perf top 界面相比，每行的最左面多了一个`’+’`号，表示此符号可以展开函数调用图谱。将焦点定位在符号 `do_pi` 后，通过**回车键**，即可展开`do_pi()`的调用图谱。展开以后，perf top 会在**每条调用路径前**显示相应的采样率，表示有多少采样是由该条路径触发的。在图中，共有 **2 条路径**调用了 `do_pi()`，分别是 `main()‐>a()‐>b()‐>do_pi()`与 `main()‐>ak()‐>bk()‐>do_pi()`。这两条路径的采样率分别是 27.42%与 27.47%。对于 复杂的软件而言，函数调用图谱为更加深入的性能分析提供了途径。我们不仅能够直观地查找热点函数，还能够进一步直观地查找到使得该函数成为热点的代码路径。
+
+参数‐G 具有 3 个配置选项 output_type，min_percent 与 call_order。选项 output_type 允许用户指定调用图谱的显示方式。Perf 提供了 3 种显示方式:
+
+⓵ graph: 使用调用树，将每条调用路径进一步折叠。这种显示方式更加直观。 每条调用路径的采样率为绝对值。也就是该条路径占整个采样域的比率。使用方法为:
+
+```
+perf top ‐G graph
+```
 
 * `'--dsos' <dso_name[,dso_name...]>`：仅显示dos名为dos_name的符号。可以同时指定多个dso，各个dso名字之间通过逗号隔开。
 
