--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/2. perf top.md
+++ b/Linux/Debug/debug/tools/perf/2. perf top.md
@@ -217,7 +217,7 @@ perf top --show-total-period
 
 图上的第二列即为该行符号在本轮分析中对应的事件总数。
 
-* `'-g'` or `'--call-graph <record_mode[,record_size],print_type,threshold[,print_limit],order,sort_key[,branch]>'`：在界面上显示函数的**调用图谱**。用户还可以指定显示类型，采样率的最小阈值，以及调用顺序。
+* `'-g'` or `'--call-graph <record_mode[,record_size],print_type,threshold[,print_limit],order,sort_key[,branch]>'`: 在界面上显示函数的**调用图谱**。用户还可以指定显示类型，采样率的最小阈值，以及调用顺序。
 
 ```
 --call-graph <record_mode[,record_size],print_type,threshold[,print_limit],order,sort_key[,branch]>
@@ -333,15 +333,47 @@ perf top –g
 参数`‐g` 具有 3 个配置选项 output_type，min_percent 与 call_order。选项 output_type 允许用户指定调用图谱的显示方式。
 
 ```
-<record_mode[,record_size],print_type,threshold[,print_limit],order,sort_key[,branch]>
+--call-graph <record_mode[,record_size],print_type,threshold[,print_limit],order,sort_key[,branch]>
+                    setup and enables call-graph (stack chain/backtrace):
+
+                        record_mode:    call graph recording mode (fp|dwarf|lbr)
+                        record_size:    if record_mode is 'dwarf', max size of stack recording (<bytes>)
+                                        default: 8192 (bytes)
+                        print_type:     call graph printing style (graph|flat|fractal|folded|none)
+                        threshold:      minimum call graph inclusion threshold (<percent>)
+                        print_limit:    maximum number of call graph entry (<number>)
+                        order:          call graph order (caller|callee)
+                        sort_key:       call graph sort key (function|address)
+                        branch:         include last branch info to call graph (branch)
+                        value:          call graph value (percent|period|count)
+
+                        Default: fp,graph,0.5,caller,function
 ```
 
 Perf 提供了 3 种显示方式:
 
-⓵ graph: 使用调用树，将每条调用路径进一步折叠。这种显示方式更加直观。 每条调用路径的采样率为绝对值。也就是该条路径占整个采样域的比率。使用方法为:
+⓵ graph: 使用调用树，将每条调用路径进一步折叠。这种显示方式更加直观。 每条调用路径的采样率为**绝对值**。也就是该条路径占**整个采样域的比率**。此为**默认选项**.
+
+使用方法为:
 
 ```
-perf top ‐G graph
+./perf top --call-graph graph
+```
+
+![2020-07-20-10-57-10.png](./images/2020-07-20-10-57-10.png)
+
+⓶ fractal。类似与 graph，但是每条路径前的采样率为**相对值**。图中采用的就是 **fractal** 风格。
+
+```
+./perf top --call-graph fractal
+```
+
+![2020-07-20-10-58-55.png](./images/2020-07-20-10-58-55.png)
+
+⓷ flat. 不折叠各条调用路径，也不显示每条调用路径的采样率。
+
+```
+./perf top --call-graph flat
 ```
 
 * `'--dsos' <dso_name[,dso_name...]>`：仅显示dos名为dos_name的符号。可以同时指定多个dso，各个dso名字之间通过逗号隔开。
