--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/2. perf top.md
+++ b/Linux/Debug/debug/tools/perf/2. perf top.md
@@ -15,7 +15,9 @@
 
 # Perf top工具
 
-top工具主要用于**实时剖析各个函数**在**某个性能事件**上的热度。利用perf top，能够直观地观察到当前的热点函数，并利用工具中内置的annotate功能，进一步查找特点指令。
+top工具主要用于**实时剖析各个函数**在**某个性能事件**上的**热度**。
+
+利用perf top，能够直观地观察到当前的热点函数，并利用工具中内置的annotate功能，进一步查找特点指令。
 
 ![2020-07-19-23-19-20.png](./images/2020-07-19-23-19-20.png)
 
@@ -219,24 +221,6 @@ perf top --show-total-period
 
 * `'-g'` or `'--call-graph <record_mode[,record_size],print_type,threshold[,print_limit],order,sort_key[,branch]>'`: 在界面上显示函数的**调用图谱**。用户还可以指定显示类型，采样率的最小阈值，以及调用顺序。
 
-```
---call-graph <record_mode[,record_size],print_type,threshold[,print_limit],order,sort_key[,branch]>
-                    setup and enables call-graph (stack chain/backtrace):
-
-                        record_mode:    call graph recording mode (fp|dwarf|lbr)
-                        record_size:    if record_mode is 'dwarf', max size of stack recording (<bytes>)
-                                        default: 8192 (bytes)
-                        print_type:     call graph printing style (graph|flat|fractal|folded|none)
-                        threshold:      minimum call graph inclusion threshold (<percent>)
-                        print_limit:    maximum number of call graph entry (<number>)
-                        order:          call graph order (caller|callee)
-                        sort_key:       call graph sort key (function|address)
-                        branch:         include last branch info to call graph (branch)
-                        value:          call graph value (percent|period|count)
-
-                        Default: fp,graph,0.5,caller,function
-```
-
 下面通过一个简单的程序观察一下 perf top 如何显示调用图谱。
 
 ```cpp
@@ -328,9 +312,9 @@ perf top –g
 
 ![2020-07-20-10-28-06.png](./images/2020-07-20-10-28-06.png)
 
-从图上可以看到，与普通的 perf top 界面相比，每行的最左面多了一个`’+’`号，表示此符号可以展开函数调用图谱。将焦点定位在符号 `do_pi` 后，通过**回车键**，即可展开`do_pi()`的调用图谱。展开以后，perf top 会在**每条调用路径前**显示相应的采样率，表示有多少采样是由该条路径触发的。在图中，共有 **2 条路径**调用了 `do_pi()`，分别是 `main()‐>a()‐>b()‐>do_pi()`与 `main()‐>ak()‐>bk()‐>do_pi()`。这两条路径的采样率分别是 27.42%与 27.47%。对于 复杂的软件而言，函数调用图谱为更加深入的性能分析提供了途径。我们不仅能够直观地查找热点函数，还能够进一步直观地查找到使得该函数成为热点的代码路径。
+从图上可以看到，与普通的 perf top 界面相比，每行的最左面多了一个`’+’`号，表示此符号可以展开函数调用图谱。将焦点定位在符号 `do_pi` 后，通过**回车键**，即可展开`do_pi()`的调用图谱。展开以后，perf top 会在**每条调用路径前**显示相应的采样率，表示有多少采样是由该条路径触发的。在图中，共有 **2 条路径**调用了 `do_pi()`，分别是 `main()‐>a()‐>b()‐>do_pi()`与 `main()‐>ak()‐>bk()‐>do_pi()`。这两条路径的采样率分别是 27.42%与 27.47%。对于复杂的软件而言，函数调用图谱为更加深入的性能分析提供了途径。我们不仅能够直观地查找热点函数，还能够进一步直观地查找到使得该函数成为热点的代码路径。
 
-参数`‐g` 具有 3 个配置选项 output_type，min_percent 与 call_order。选项 output_type 允许用户指定调用图谱的显示方式。
+参数`‐g` 具有多个选项 `output_type` 允许用户指定调用图谱的显示方式。
 
 ```
 --call-graph <record_mode[,record_size],print_type,threshold[,print_limit],order,sort_key[,branch]>
@@ -376,6 +360,22 @@ Perf 提供了 3 种显示方式:
 ./perf top --call-graph flat
 ```
 
+我们还可以通过 threshold 选项过滤采样率低于 threshold 的调用路径。
+threshold 的默认值为 0.5。
+
+选项 order 用以设定调用图谱的**显示顺序**，该选项有 2 个取值，分别是
+callee 与 caller。
+- 将该选项设为 **callee** 时，perf 按照**被调用的顺序**显示调用图谱，**上层函数被下层函数所调用**。
+- 该选项被设为 **caller** 时，按照调用顺序显示调用图谱，即**上层函数调用了下层函数**。
+
+执行如下命令后，可以得到 callee 风格的调用图谱，如图所示。
+
+```
+./perf top --call-graph graph,0.5,callee
+```
+
+![2020-07-20-11-08-51.png](./images/2020-07-20-11-08-51.png)
+
 * `'--dsos' <dso_name[,dso_name...]>`：仅显示dos名为dos_name的符号。可以同时指定多个dso，各个dso名字之间通过逗号隔开。
 
 * `'--comms' <comm[,comm...]>`：仅显示属于进程"comm"的符号。
@@ -383,4 +383,3 @@ Perf 提供了 3 种显示方式:
 * `'--symbols' <symbol[,symbol...]>`：仅显示指定的符号。
 
 * `'-M'` or `'--disassembler-style'`：显示符号注解时，可以通过此参数指定汇编语言的风格。
-
