--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/2. perf top.md
+++ b/Linux/Debug/debug/tools/perf/2. perf top.md
@@ -3,8 +3,8 @@
 
 <!-- code_chunk_output -->
 
-- [1. Perf top工具](#1-perf-top工具)
-- [2. 基本使用方法](#2-基本使用方法)
+- [1. 用途](#1-用途)
+- [2. 使用方法](#2-使用方法)
 - [3. 3种用户页面](#3-3种用户页面)
 - [4. 4列信息](#4-4列信息)
 - [5. 帮助信息](#5-帮助信息)
@@ -13,7 +13,7 @@
 
 <!-- /code_chunk_output -->
 
-# 1. Perf top工具
+# 1. 用途
 
 对于一个**指定的性能事件**(默认是CPU周期)，显示**消耗最多**的**函数**或**指令**。
 
@@ -23,7 +23,7 @@
 
 ![2020-07-19-23-19-20.png](./images/2020-07-19-23-19-20.png)
 
-# 2. 基本使用方法
+# 2. 使用方法
 
 查看帮助手册
 
