--- a/Linux/Debug/debug/tools/perf/3. perf stat.md
+++ b/Linux/Debug/debug/tools/perf/3. perf stat.md
@@ -5,6 +5,11 @@
 
 - [用途](#用途)
 - [使用方法](#使用方法)
+  - [ls例子](#ls例子)
+    - [task-clock: 真正占用的处理器时间](#task-clock-真正占用的处理器时间)
+    - [context-switches: 上下文切换](#context-switches-上下文切换)
+    - [cpu-migration: 处理器的负载均衡](#cpu-migration-处理器的负载均衡)
+    - [](#)
 
 <!-- /code_chunk_output -->
 
@@ -30,16 +35,37 @@ perf stat [-e <EVENT> | --event=EVENT] [-a] <command>
 perf stat [-e <EVENT> | --event=EVENT] [-a] -- <command> [<options>]
 ```
 
+## ls例子
+
 比如查看ls程序的典型性能数据
 
-![2020-07-20-14-13-51.png](./images/2020-07-20-14-13-51.png)
+![2020-07-20-14-26-07.png](./images/2020-07-20-14-26-07.png)
 
-从图上可以看到，perf stat 工具利用 8 个典型性能事件剖析了应用程序。
+从图上可以看到，perf stat 工具利用 10 个典型性能事件剖析了应用程序。
+
+### task-clock: 真正占用的处理器时间
 
 `task‐clock` 事件表示目标任务’ls’**真正占用处理器的时间**，单位是**毫秒**。我们将其称为任务执行时间。
 
-如图所示，’ls’在处理器上执行了 0.81  毫秒。`“0.656 CPUs utilized”`表示目标任务的**处理器占用率**。处理器占用率表示**目标任务的执行时间**与**持续时间的比值**。持续时间是指从任务提交到执行结束之间的**总时间**。
+如图所示，’ls’在处理器上执行了 `3.98` 毫秒。`“0.256 CPUs utilized”`表示目标任务的**处理器占用率**。处理器占用率表示**目标任务的执行时间**与**持续时间的比值**。持续时间是指从任务提交到执行结束之间的**总时间**。
+
+### context-switches: 上下文切换
 
 对操作系统有过了解的读者应该知道，Linux 这种多任务分时操作系统中，一个任务不太可能在执行期间始终占据处理器。操作系统会根据调度策略(linux 目前使用 CFS 调度算法)合理安排各个任务轮流使用处理器，**每次调度**会产生**一次上下文切换**。在此期间操作系统还需处理大量中断。因此，一个任务的执行时间可能会很短，但是它的持续时间会远高于此(除非此任务是优先级最高的实时任务)。 
 
-以图中的例子来说，’ls’的执行时间为 0.81 毫秒，而持续为 1.236 毫秒，处理器占用率为 `0.656`. 在此期间，系统共发生了 0 次上下文切换。平均每秒发生 0.011*106 次。上下文切换次数的均值是上下文切换次数与任务执行时间的比值。
+以图中的例子来说，’ls’的执行时间为 `3.98` 毫秒，而持续为 `15.58` 毫秒，处理器占用率为 `0.256`. 在此期间，系统共发生了 45 次上下文切换。平均每秒发生 `0.011*10^6` 次。上下文切换次数的**均值**是**上下文切换次数**与**任务执行时间**的**比值**。
+
+### cpu-migration: 处理器的负载均衡
+
+在多(核)处理器系统中，Linux 为了维持**各个处理器的负载均衡**，会在特定条件下将**某个任务**从一个处理器**迁往另外一个处理器**。此时，我们便说发生了一次处理器迁移。从图上看到，ls 在执行期间**没有被操作系统迁移过**。(`cpu-migration`)
+
+###
+
+Linux 的内存管理子系统采用了**分页机制**。当应用程序请求的**页面尚未建立**、请求的**页面不在内存**中、或者**请求的页面虽然在内存**中，但**尚未建立**物理地址与虚拟地址的**映射关系**时，都会**触发一次缺页异常**(`page‐fault`)。内核在**捕获缺页异常**时，根据异常种类进行相应的处理。另外，**TLB 不命中**，**页面访问权限不匹配**等情况也会触发**缺页异常**。
+
+内核中对 page faults (PERF_COUNT_SW_PAGE_FAULTS)事件的精确定义是缺页 异常的处理函数 do_page_fault()被执行。程序’ls’在执行期间共触发了 320 次缺页 异常。平均发生率为每秒 0.08*106 次。
+‘cycles’为’ls’程序消耗的处理器周期数。如果将被’ls’占据的那部分时间看作一 个抽象处理器，它的主频只需为 0.75GHz 便可以在 3.98 毫秒内完成’ls’命令的处 理。
+‘instructions’是指命令’ls’执行期间产生的处理器指令数。IPC(instructions perf cycle)为 0.69。IPC 是评价处理器与应用程序性能的重要指标。在 X86 这种 CSIC
+
+处理器上，很多指令需要多个处理器周期才能执行完毕。另外，有些指令在流水 线上未必能成功引退(retired)，从而形成无效指令。长指令与无效执行越多，IPC 就越低，处理器的利用率与程序的执行效率也就越低。因此，IPC 在一定程度下， 让我们对程序的执行效率有一个宏观认识。
+‘branches’是指程序在执行期间遇到的分支指令数。’branch‐misses’则是预测 错误的分支指令数。绝大多数现代处理器都具有分支预测与 OOO(Out‐of‐Order) 执行机制，以充分利用 CPU 内部的资源，减少流水线停顿周期。当处理器遇到 分支指令时，正常来说，需要等待分支条件计算完毕才能知道后续指令流该往何 处跳转。这就导致在等待分支条件计算期间，流水线上出现若干周期的停顿(流 水线 Hazard)。体系结构的经典著作《计算机体系结构:量化研究方法》上说， 分支指令产生的性能影响为 10%~30%[2]，流水线越长，性能影响就越大。为了减 少分支指令造成的流水线停顿，从 P5 处理器开始引入了分支预测机制。当处理 器无法判断指令的跳转方向时，便通过分支预测单元选择一个最有可能的跳转方 向。但是，既然是预测，就存在预测失败的可能。当分支预测失败时，会对处理 器周期造成较大的浪费。在 5 发射 10 级流水线的处理器中，当分支预测的准确 率为 90%时，处理器带宽会浪费 47%;而如果准确率提高到 96%，带宽浪费可降 低至 26%[3]。Core i7 以及 Xeon 5500 等较新的处理器在分支预测失效时，已经无 需刷新全部流水线，但错误指令加载与计算导致的无效开销依然不可小觑。这就 要求我们在编写代码时，应尽量减少分支预测错误的次数。但在此之前，通过 perf stat，perf top，perf record 等工具查查分支预测失效率，以及导致分支预测 失效过高的热点代码是非常有必要的。’branch misses’一行中的’***% of all branches’即为目标程序执行期间的分支预测失效率。
