--- a/Linux/Debug/debug/tools/perf/2. perf top.md
+++ b/Linux/Debug/debug/tools/perf/2. perf top.md
@@ -10,6 +10,18 @@
 - [5. 帮助信息](#5-帮助信息)
 - [6. annoate注解功能](#6-annoate注解功能)
 - [7. 参数介绍](#7-参数介绍)
+  - [常用参数](#常用参数)
+  - [指定性能事件](#指定性能事件)
+  - [采样周期](#采样周期)
+  - [进程id](#进程id)
+  - [线程id](#线程id)
+  - [所有CPU](#所有cpu)
+  - [特定的CPU列表](#特定的cpu列表)
+  - [有符号表的内核映像](#有符号表的内核映像)
+  - [不显示内核符号](#不显示内核符号)
+  - [mmap页面数](#mmap页面数)
+  - [实时优先级](#实时优先级)
+  - [界面刷新周期](#界面刷新周期)
 
 <!-- /code_chunk_output -->
 
@@ -91,7 +103,15 @@ top工具的界面具有4列信息。
 
 # 7. 参数介绍
 
+## 常用参数
+
+* '-e': 指定性能事件
+* '-p': 指定待分析进程的 PID 
+* '-t': 指定待分析线程的 TID
+
 Perf top的参数较多，本文只介绍几个常用的参数的使用方法。
+
+## 指定性能事件
 
 * `'-e'` or `'--event' <event>`: 该参数用于**指定分析的性能事件**。默认情况下, cycles（CPU周期数）
 
@@ -103,13 +123,23 @@ Perf top的参数较多，本文只介绍几个常用的参数的使用方法。
 perf top -e cache-misses
 ```
 
+## 采样周期
+
 * `'-c'` or `'--count' <n>`: 该参数用于指定性能计数器的**采样周期**。默认情况下，**每秒采样4000次**。
+
+## 进程id
 
 * `'-p'` or `'--pid' <pid>`: 该参数用于指定分析**进程的pid**。指定pid后，perf top仅分析**目标进程**以及**目标进程创建的线程**。
 
+## 线程id
+
 * `'-t'` or `'--tid' <tid>`: 该参数用于指定分析**线程的tid**。指定tid后，perf top仅分析**目标线程**，**不包括**此线程**创建的其他线程**。
 
+## 所有CPU
+
 * `'-a'` or `'--all-cpus'`: 采集系统中**所有CPU产生的性能事件**。这就是perf top的**默认情况**。
+
+## 特定的CPU列表
 
 * `'-C'` or `'--cpu' <cpu>`: 指定**待分析的CPU列表**。
 
@@ -118,6 +148,8 @@ perf top -e cache-misses
 ```
 perf top -C 0,3
 ```
+
+## 有符号表的内核映像
 
 * `'-k'` or `'--vmlinux' <file>`: 指定**带符号表的内核映像**所在的路径。
 
@@ -133,11 +165,17 @@ Perf通常采用以下顺序加载**内核符号**：
 6. /lib/modules/$(uts.release)/build/vmlinux
 7. /usr/lib/debug/lib/modules/$(uts.release)/build/vmlinux
 
-* `'-K'` or `'--hide_kernel_symbols'`: 不显示属于内核的符号。对于只想分析应用程序的用户而言，使用此参数后，perf top的界面会清爽很多。
+## 不显示内核符号
 
-* `'-m'` or `'--mmap-pages' <n> `: 指定perf开辟的mmap页面的数量。mmap缓存主要用于用户空间与内核空间的数据通信。perf在内核中驱动将采集到的性能数据存入ring buffer，用户空间的分析程序则通过mmap机制从ring buffer中读取数据。
+* `'-K'` or `'--hide_kernel_symbols'`: **不显示属于内核的符号**。对于只想分析应用程序的用户而言，使用此参数后，perf top的界面会清爽很多。
+
+## mmap页面数
+
+* `'-m'` or `'--mmap-pages' <n> `: 指定perf**开辟的mmap页面的数量**。mmap缓存主要用于用户空间与内核空间的数据通信。perf在内核中驱动将采集到的性能数据存入ring buffer，用户空间的分析程序则通过mmap机制从ring buffer中读取数据。
 
 默认情况下，mmap的页面数量为128，此时mmap内存区域的大小为512KB。perf top默认每个2s读取一次性能数据，当内核生成性能数据的速度过快时，就可能因为缓冲区满导致数据丢失，从而影响到分析结果。在此情况下，用户可以通过'-m'参数扩大缓冲区，以避免性能数据的大量丢失。
+
+## 实时优先级
 
 * `'-r'` or `'--realtime' <n>`：指定分析程序的实时优先级。如上文所述，如果perf分析程序读取数据的速度长期小于内核生成数据的速度时，就可能导致采样数据的大量丢失，影响分析精度。在系统负载过高时，分析程序可能会因为调度延迟过高而不能及时读取数据。因此，在高负载系统中可以通过参数'-r'将分析程序设置为实时进程，并为其设定较高的优先级。
 
@@ -145,9 +183,11 @@ Perf通常采用以下顺序加载**内核符号**：
 perf top -r 0
 ```
 
-上述命令中，0即为指定给分析程序的实时优先级。顺便说一句，Linux中实时优先级的范围是`[0,99]`，其中优先级0最高。不要与范围是`[-20,19]`的nice值搞混。
+上述命令中，0即为指定给分析程序的**实时优先级**。顺便说一句，Linux中实时优先级的范围是`[0,99]`，其中优先级0最高。不要与范围是`[-20,19]`的nice值搞混。
 
-* `'-d'` or `'--delay' <n>`：指定perf top页面的刷新周期，<n>的单位为妙。默认值为2s。
+## 界面刷新周期
+
+* `'-d'` or `'--delay' <n>`：指定perf top界面的刷新周期，<n>的单位为妙。默认值为2s。
 
 * `'-D'` or `'--dump-symtab'`：打印DSO的符号表，此功能主要用于perf自身的调试。该参数仅与`'--stdio'`（即TTY界面）配合使用时才起作用。启用此参数后，perf top会在退出时打印所有DSO的符号表。
 
