--- a/Linux/Debug/debug/tools/perf/2. perf top.md
+++ b/Linux/Debug/debug/tools/perf/2. perf top.md
@@ -22,6 +22,11 @@
   - [mmap页面数](#mmap页面数)
   - [实时优先级](#实时优先级)
   - [界面刷新周期](#界面刷新周期)
+  - [DSO的符号表](#dso的符号表)
+  - [符号过滤](#符号过滤)
+  - [计数器组](#计数器组)
+  - [动态创建的进程的性能采集](#动态创建的进程的性能采集)
+  - [](#)
 
 <!-- /code_chunk_output -->
 
@@ -105,9 +110,16 @@ top工具的界面具有4列信息。
 
 ## 常用参数
 
-* '-e': 指定性能事件
-* '-p': 指定待分析进程的 PID 
-* '-t': 指定待分析线程的 TID
+* `'-e'`: 指定性能事件
+* `'-p'`: 指定待分析进程的 PID 
+* `'-t'`: 指定待分析线程的 TID
+* `'-a’`: 分析整个系统的性能(Default) 
+* `'-c'`: 事件的采样周期
+* `'-d'`: 界面的刷新周期(Default:2s) 
+* `'-E'`: 显示的函数条数
+* `'-r <priority>'`: 将 perf top 作为实时任务，优先级为 <priority>
+* `'-K'`: 不显示内核符号 
+* `'-U'`: 不显示用户符号
 
 Perf top的参数较多，本文只介绍几个常用的参数的使用方法。
 
@@ -189,7 +201,11 @@ perf top -r 0
 
 * `'-d'` or `'--delay' <n>`：指定perf top界面的刷新周期，<n>的单位为妙。默认值为2s。
 
-* `'-D'` or `'--dump-symtab'`：打印DSO的符号表，此功能主要用于perf自身的调试。该参数仅与`'--stdio'`（即TTY界面）配合使用时才起作用。启用此参数后，perf top会在退出时打印所有DSO的符号表。
+## DSO的符号表
+
+* `'-D'` or `'--dump-symtab'`：打印**DSO的符号表**，此功能主要用于perf自身的调试。该参数仅与`'--stdio'`（即TTY界面）配合使用时才起作用。
+
+启用此参数后，perf top会在退出时打印所有DSO的符号表。
 
 ```
 perf top --stdio -D
@@ -200,11 +216,19 @@ perf top --stdio -D
 图中给出了 perf top 输出的符号表的片段，这些符号来自于 ELF 文件’thread’
 的 symtable section。符号表的第一列为该符号的地址范围。第二列表示该符号的属性，如’g’表示全局符号，’l’表示局部符号等。
 
-* `'-f'` or `'--count-filter' <n>`：此参数主要用于符号过滤。指定此参数后，页面上将仅显示采样数大于<n>的符号。
+## 符号过滤
 
-* `'-g'` or `'--group'`：将计数器组合成计数器组。Perf在默认情况下会为每个计数器创建一个独立的ring buffer。如果将计数器组合成计数器组，perf则会将所有counter的数据输出到group leader的ring buffer中。当内核生成采样数据不多并且内存较为紧张时，可采用此参数以节省内存。
+* `'-f'` or `'--count-filter' <n>`：此参数主要用于**符号过滤**。指定此参数后，页面上将仅显示采样数`大于<n>`的符号。
 
-* `'-i'` or `'--inherit'`：采用此参数后，子进程将自动集成父进程的性能事件。从而使得perf能够采集到动态创建的进程的性能数据。但是当采用'-p'参数仅分析特定进程的性能数据时，继承机制会被禁用。这主要是出于性能的考虑。
+## 计数器组
+
+* `'-g'` or `'--group'`：将计数器组合成**计数器组**。Perf在默认情况下会为每个计数器创建一个独立的ring buffer。如果将计数器组合成计数器组，perf则会将所有counter的数据输出到group leader的ring buffer中。当内核生成采样数据不多并且内存较为紧张时，可采用此参数以节省内存。
+
+## 动态创建的进程的性能采集
+
+* `'-i'` or `'--inherit'`：采用此参数后，子进程将**自动集成父进程的性能事件**。从而使得perf能够采集到**动态创建的进程的性能数据**。但是当采用`'-p'`参数仅分析特定进程的性能数据时，继承机制会被禁用。这主要是出于性能的考虑。
+
+## 
 
 * `'--sym-annotate' <symbol name>`：指定待解析的符号名。
 
