--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/2. perf top.md
+++ b/Linux/Debug/debug/tools/perf/2. perf top.md
@@ -110,7 +110,7 @@ top工具的界面具有4列信息。
 
 ## 常用参数
 
-* `'-e'`: 指定性能事件
+* `'-e'`: 指定性能事件, 默认是`cycles`
 * `'-p'`: 指定待分析进程的 PID 
 * `'-t'`: 指定待分析线程的 TID
 * `'-a’`: 分析整个系统的性能(Default) 
