--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/2. perf top.md
+++ b/Linux/Debug/debug/tools/perf/2. perf top.md
@@ -117,7 +117,7 @@ top工具的界面具有4列信息。
 * `'-c'`: 事件的采样周期
 * `'-d'`: 界面的刷新周期(Default:2s) 
 * `'-E'`: 显示的函数条数
-* `'-r <priority>'`: 将 perf top 作为实时任务，优先级为 <priority>
+* `'-r <priority>'`: 将 perf top 作为实时任务，优先级为 `<priority>`
 * `'-K'`: 不显示内核符号 
 * `'-U'`: 不显示用户符号
 
