--- a/Linux/Debug/debug/tools/perf/4. perf record.md
+++ b/Linux/Debug/debug/tools/perf/4. perf record.md
@@ -7,6 +7,7 @@
 - [2. 使用方法](#2-使用方法)
 - [3. 参数介绍](#3-参数介绍)
   - [3.1. 常用参数](#31-常用参数)
+  - [](#)
 
 <!-- /code_chunk_output -->
 
@@ -36,8 +37,9 @@ perf record [-e <EVENT> | --event=EVENT] [-l] [-a] -- <command> [<options>]
 * `'-t'`: 指定待分析线程的 TID
 * `'-a’`: 分析整个系统的性能(Default) 
 * `'-c'`: 事件的采样周期
-* `'-d'`: 界面的刷新周期(Default:2s) 
-* `'-E'`: 显示的函数条数
-* `'-r <priority>'`: 将 perf top 作为实时任务，优先级为 <priority>
-* `'-K'`: 不显示内核符号 
-* `'-U'`: 不显示用户符号
+* `'-o'`: 指定输出文件(Default: perf.data) 
+* `'-g'`: 记录函数间的调用关系
+* `'-r <priority>'`: 将 perf top 作为实时任务，优先级为 `<priority>`
+* `'-u <uid>'`: 只分析用户`<uid>`创建的进程
+
+## 
