--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/5. perf report.md
+++ b/Linux/Debug/debug/tools/perf/5. perf report.md
@@ -15,8 +15,6 @@
 
 读取perf record记录的perf.data, 并分析显示这些分析数据
 
-
-
 # 2. 使用方法
 
 ```
@@ -38,8 +36,6 @@ perf report [-i <file> | --input=file]
 * `'--comms=<comm>'`: 只显示指定comm的信息
 * `'-S <symbol name>'`: 只考虑指定符号 
 * `'-U'`: 只显示已解析的符号
-* `'-g [type,min]'`: 按照 `[type,min]` 指定的方式显示函数
-调用图
-* `'-u <uid>'`: 只分析用户`<uid>`创建的进程
+* `'-g [type,min[,limit],order], --call-graph'`: 按照指定的方式显示函数调用图
 
 ## 
