--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/9. perf kvm.md
+++ b/Linux/Debug/debug/tools/perf/9. perf kvm.md
@@ -31,6 +31,12 @@ perf kvm [--host] [--guest] [--guestkallsyms=<path> --guestmodules=<path>
          | --guestvmlinux=<path>] {top|record|report|diff|buildid-list|stat}
 ```
 
+perf kvm有几个变体:
+
+* `perf kvm [options] top <command>`: 用于实时生成并显示虚拟机操作系统的性能数据
+* `perf kvm record <command>`: 
+
+
 # 3. 获取guest的kallsyms和modules文件
 
 为了能够让kvm子工具正确解析guest的符号，我们首先需要把guest系统的/proc/kallsyms和 /proc/modules文件拷贝到host中。
