--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/9. perf kvm.md
+++ b/Linux/Debug/debug/tools/perf/9. perf kvm.md
@@ -41,6 +41,7 @@ perf kvm有几个变体:
 * `perf kvm stat <command>`: 执行一个命令并收集性能统计数据.
     - `perf kvm stat record/report`可以生成KVM events的统计分析. 目前, vmexit、mmio和ioport event是支持的.
     - `perf kvm stat record <command>`记录kvm events和command的起始和结束之间的所有events.
+* `perf kvm stat report`: 报告统计数据, 包括events处理时间, 采样等等.
 
 
 # 3. 获取guest的kallsyms和modules文件
