--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/3. perf stat.md
+++ b/Linux/Debug/debug/tools/perf/3. perf stat.md
@@ -50,7 +50,7 @@ perf stat [-e <EVENT> | --event=EVENT] [-a] -- <command> [<options>]
 
 ![2020-07-20-14-26-07.png](./images/2020-07-20-14-26-07.png)
 
-从图上可以看到，perf stat 工具利用 10 个典型性能事件剖析了应用程序。
+从图上可以看到，perf stat 工具利用 **10 个典型性能事件**剖析了应用程序。
 
 ## 3.1. task-clock: 真正占用的处理器时间
 
