--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/2. perf top.md
+++ b/Linux/Debug/debug/tools/perf/2. perf top.md
@@ -266,8 +266,7 @@ perf top -s comm,pid,dso,parent,symbol
 
 ![2020-07-20-10-06-42.png](./images/2020-07-20-10-06-42.png)
 
-从图可以查看更丰富的信息，各行信息的意义与上述命令中个字段的排
-序相对应。
+从图可以查看更丰富的信息，各行信息的意义与上述命令中个字段的排序相对应。
 
 * `'-n'` or `'--show-nr-samples'`：显示**每个符号**对应的**采样数量**。
 
