--- a/Linux/Debug/debug/tools/perf/9. perf kvm.md
+++ b/Linux/Debug/debug/tools/perf/9. perf kvm.md
@@ -128,7 +128,7 @@ perf kvm --host --guest --guestmodules=guest-modules report -i perf.data.kvm --f
 
 其中**模块名前有guest前缀**的都是**guest中发生的采样事件**，模块名为unknown的为guest中运行的workload，因为没有该workload的符号表，所以此处不能解析出workload的名字。其余都是host中的采样事件。
 
-如果我们仔细观察我们用来记录guest采样事件的命令就会发现，我们**只能**提供**一个guest**的**kallsyms**和**modules**文件。所以，也就只能解析一个guest的符号，当host有多个guest时，可能符号解析会出错。当然，我们也可以同时监测多个guest的性能事件，然后根据各个guest的kallsyms和modules文件手动解析这些符号。
+如果我们仔细观察我们用来记录guest采样事件的命令就会发现，我们**只能**提供**一个guest**的**kallsyms**和**modules**文件。所以，也就只能解析一个guest的符号，当host有多个guest时，可能符号解析会出错。当然，我们也可以同时监测多个guest的性能事件，然后根据各个guest的kallsyms和modules文件**手动解析**这些符号。
 
 将来perf kvm可能通过增加guest的PID的方式来分别指定每个guest的kallsyms和modules文件，那么，就可以正确解析每个guest的符号。
 
