--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/2. perf top.md
+++ b/Linux/Debug/debug/tools/perf/2. perf top.md
@@ -26,6 +26,7 @@
   - [符号过滤](#符号过滤)
   - [计数器组](#计数器组)
   - [动态创建的进程的性能采集](#动态创建的进程的性能采集)
+  - [指定符号名](#指定符号名)
   - [](#)
 
 <!-- /code_chunk_output -->
@@ -228,9 +229,11 @@ perf top --stdio -D
 
 * `'-i'` or `'--inherit'`：采用此参数后，子进程将**自动集成父进程的性能事件**。从而使得perf能够采集到**动态创建的进程的性能数据**。但是当采用`'-p'`参数仅分析特定进程的性能数据时，继承机制会被禁用。这主要是出于性能的考虑。
 
-## 
+## 指定符号名
 
 * `'--sym-annotate' <symbol name>`：指定待解析的符号名。
+
+## 
 
 * `'-z'` or `'--zero'`：更新页面的数据后，清除历史信息。
 
